finish page adjust and update parse files

--- a/src/assets/game_data/Timelines (7.10)/locales/es.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/es.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "Cuartel General",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "Producción de Compuestos Avanzados",
   "{20104,100101}": "Extensión del Anillo Hábitat",
   "{20104,100201}": "Columna del Anillo Habitat",
@@ -11,11 +11,11 @@
   "{20104,100801}": "Matriz de Sensores",
   "{20104,100901}": "Área de Mantenimiento",
   "{20104,101001}": "Ventilación",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20104,10001} {20202,501}",
+  "{20104,10101}": "Producción de Compuestos Avanzados Teladi",
   "{20104,101101}": "Estructura de Apoyo",
   "{20104,101201}": "Repetidor de Mando",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "Almacenamiento del Hábitat A",
+  "{20104,101306}": "Almacenamiento del Hábitat B",
   "{20104,101401}": "Anillo Hábitat",
   "{20104,101601}": "Módulo Desconocido",
   "{20104,101801}": "Módulo de Base Xenon",
@@ -33,15 +33,15 @@
   "{20104,10701}": "Producción de Componentes de Drones",
   "{20104,10801}": "Producción de Célula de Energía",
   "{20104,10901}": "Producción de Componentes de Motor",
-  "{20104,11001}": "(Teladi Engine Part Production){20104,10901} {20202,501}",
+  "{20104,11001}": "Producción de Componentes de Motor Teladi",
   "{20104,110201}": "Antro de Apuestas",
   "{20104,11101}": "Producción de Bobina de Campo",
   "{20104,11201}": "Producción de Grafeno",
   "{20104,11301}": "Producción de Partes de Casco",
-  "{20104,11401}": "(Teladi Hull Part Production){20104,11301} {20202,501}",
-  "{20104,11601}": "(Argon Medical Supply Production){20104,11501} {20202,101}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20104,11501} {20202,401}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20104,11501} {20202,501}",
+  "{20104,11401}": "Producción de Partes de Casco Teladi",
+  "{20104,11601}": "Producción de Suministros Médicos Argon",
+  "{20104,11701}": "Producción de Suministros Médicos Paranid",
+  "{20104,11801}": "Producción de Suministros Médicos Teladi",
   "{20104,11901}": "Producción de Microchip",
   "{20104,12001}": "Producción de Componentes de Misil",
   "{20104,120101}": "Procesador de Chatarra",
@@ -49,7 +49,7 @@
   "{20104,12201}": "Producción de Tubo Cuántico",
   "{20104,12301}": "Producción de Metal Refinado",
   "{20104,12401}": "Producción de Matriz de Escaneo",
-  "{20104,12501}": "(Teladi Scanning Array Production){20104,12401} {20202,501}",
+  "{20104,12501}": "Producción de Matriz de Escaneo Teladi",
   "{20104,12601}": "Producción de Componente de Escudo",
   "{20104,12701}": "Producción de Panel de Silicio",
   "{20104,12801}": "Producción de Chip Inteligente",
@@ -74,85 +74,85 @@
   "{20104,14601}": "Producción de Teladianium",
   "{20104,14701}": "Panel Solar Matriz",
   "{20104,150101}": "Matriz de sensores de área amplia",
-  "{20104,20101}": "(Argon S Container Storage){20104,20001} {20111,5011} {20202,101}",
-  "{20104,20201}": "(Argon M Container Storage){20104,20001} {20111,5021} {20202,101}",
-  "{20104,20301}": "(Argon L Container Storage){20104,20001} {20111,5031} {20202,101}",
-  "{20104,20401}": "(Paranid S Container Storage){20104,20001} {20111,5011} {20202,401}",
-  "{20104,20501}": "(Paranid M Container Storage){20104,20001} {20111,5021} {20202,401}",
-  "{20104,20601}": "(Paranid L Container Storage){20104,20001} {20111,5031} {20202,401}",
-  "{20104,20701}": "(Teladi S Container Storage){20104,20001} {20111,5011} {20202,501}",
-  "{20104,20801}": "(Teladi M Container Storage){20104,20001} {20111,5021} {20202,501}",
-  "{20104,20901}": "(Teladi L Container Storage){20104,20001} {20111,5031} {20202,501}",
-  "{20104,21101}": "(Argon S Liquid Storage){20104,21001} {20111,5011} {20202,101}",
-  "{20104,21201}": "(Argon M Liquid Storage){20104,21001} {20111,5021} {20202,101}",
-  "{20104,21301}": "(Argon L Liquid Storage){20104,21001} {20111,5031} {20202,101}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20104,21001} {20111,5011} {20202,401}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20104,21001} {20111,5021} {20202,401}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20104,21001} {20111,5031} {20202,401}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20104,21001} {20111,5011} {20202,501}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20104,21001} {20111,5021} {20202,501}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20104,21001} {20111,5031} {20202,501}",
-  "{20104,22101}": "(Argon S Solid Storage){20104,22001} {20111,5011} {20202,101}",
-  "{20104,22201}": "(Argon M Solid Storage){20104,22001} {20111,5021} {20202,101}",
-  "{20104,22301}": "(Argon L Solid Storage){20104,22001} {20111,5031} {20202,101}",
-  "{20104,22401}": "(Paranid S Solid Storage){20104,22001} {20111,5011} {20202,401}",
-  "{20104,22501}": "(Paranid M Solid Storage){20104,22001} {20111,5021} {20202,401}",
-  "{20104,22601}": "(Paranid L Solid Storage){20104,22001} {20111,5031} {20202,401}",
-  "{20104,22701}": "(Teladi S Solid Storage){20104,22001} {20111,5011} {20202,501}",
-  "{20104,22801}": "(Teladi M Solid Storage){20104,22001} {20111,5021} {20202,501}",
-  "{20104,22901}": "(Teladi L Solid Storage){20104,22001} {20111,5031} {20202,501}",
-  "{20104,23301}": "(Argon L Universal Storage){20104,23001} {20111,5031} {20202,101}",
+  "{20104,20101}": "Almacenamiento en Contenedores S Argon",
+  "{20104,20201}": "Almacenamiento en Contenedores M Argon",
+  "{20104,20301}": "Almacenamiento en Contenedores L Argon",
+  "{20104,20401}": "Almacenamiento en Contenedores S Paranid",
+  "{20104,20501}": "Almacenamiento en Contenedores M Paranid",
+  "{20104,20601}": "Almacenamiento en Contenedores L Paranid",
+  "{20104,20701}": "Almacenamiento en Contenedores S Teladi",
+  "{20104,20801}": "Almacenamiento en Contenedores M Teladi",
+  "{20104,20901}": "Almacenamiento en Contenedores L Teladi",
+  "{20104,21101}": "Almacenamiento de Líquidos S Argon",
+  "{20104,21201}": "Almacenamiento de Líquidos M Argon",
+  "{20104,21301}": "Almacenamiento de Líquidos L Argon",
+  "{20104,21401}": "Almacenamiento de Líquidos S Paranid",
+  "{20104,21501}": "Almacenamiento de Líquidos M Paranid",
+  "{20104,21601}": "Almacenamiento de Líquidos L Paranid",
+  "{20104,21701}": "Almacenamiento de Líquidos S Teladi",
+  "{20104,21801}": "Almacenamiento de Líquidos M Teladi",
+  "{20104,21901}": "Almacenamiento de Líquidos L Teladi",
+  "{20104,22101}": "Almacenamiento de Sólidos S Argon",
+  "{20104,22201}": "Almacenamiento de Sólidos M Argon",
+  "{20104,22301}": "Almacenamiento de Sólidos L Argon",
+  "{20104,22401}": "Almacenamiento de Sólidos S Paranid",
+  "{20104,22501}": "Almacenamiento de Sólidos M Paranid",
+  "{20104,22601}": "Almacenamiento de Sólidos L Paranid",
+  "{20104,22701}": "Almacenamiento de Sólidos S Teladi",
+  "{20104,22801}": "Almacenamiento de Sólidos M Teladi",
+  "{20104,22901}": "Almacenamiento de Sólidos L Teladi",
+  "{20104,23301}": "Almacenamiento Universal L Argon",
   "{20104,24001}": "Almacenamiento de Matrices",
-  "{20104,30101}": "(Argon S Habitat){20104,30103} {20111,5011} {20202,101}",
-  "{20104,30201}": "(Argon M Habitat){20104,30203} {20111,5021} {20202,101}",
-  "{20104,30301}": "(Argon L Habitat){20104,30303} {20111,5031} {20202,101}",
-  "{20104,30401}": "(Paranid S Dome){20104,30403} {20111,5011} {20202,401}",
-  "{20104,30501}": "(Paranid M Dome){20104,30503} {20111,5021} {20202,401}",
-  "{20104,30601}": "(Paranid L Dome){20104,30603} {20111,5031} {20202,401}",
-  "{20104,30701}": "(Teladi S Biome){20104,30703} {20111,5011} {20202,501}",
-  "{20104,30801}": "(Teladi M Biome){20104,30803} {20111,5021} {20202,501}",
-  "{20104,30901}": "(Teladi L Biome){20104,30903} {20111,5031} {20202,501}",
-  "{20104,40101}": "(Argon Administrative Centre){20104,40001} {20202,101}",
-  "{20104,40201}": "(Paranid Administrative Centre){20104,40001} {20202,401}",
-  "{20104,40301}": "(Teladi Administrative Centre){20104,40001} {20202,501}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20104,40501} {20202,101}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20104,40501} {20202,401}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20104,40501} {20202,501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20104,41001} {20202,101}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20104,41001} {20202,401}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20104,41001} {20202,501}",
-  "{20104,41601}": "(Paranid Faction Capital){20104,41501} {20202,401}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20202,101} {20104,50001} {20111,5101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20202,101} {20104,50001} {20111,5102}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20202,101} {20104,50001} {20111,5103}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20104,50001} {20111,5101} {20202,401}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20104,50001} {20111,5102} {20202,401}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20104,50001} {20111,5103} {20202,401}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20104,50001} {20111,5101} {20202,501}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20104,50001} {20111,5102} {20202,501}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20104,50001} {20111,5103} {20202,501}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20104,51301} {20111,5101} {20202,101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20104,51301} {20111,5101} {20202,401}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20104,51301} {20111,5102} {20202,401}",
-  "{20104,51701}": "{20104,56201} {20111,5101} {20202,401} ",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20104,51301} {20111,5101} {20202,501}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20104,52001} {20111,5101} {20202,101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20104,52001} {20111,5102} {20202,101}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20104,52001} {20111,5101} {20202,401}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20104,52001} {20111,5102} {20202,401}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20104,52001} {20111,5101} {20202,501}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20104,52001} {20111,5102} {20202,501}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20104,50001} {20111,6001} {20111,5101}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20111,6001} {20104,50001} {20111,5102}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20104,50001} {20111,6001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20104,51301} {20111,6001} {20111,5101}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20104,52001} {20111,6001} {20111,5101}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20104,52001} {20111,6001} {20111,5102}",
-  "{20104,55501}": "{20104,55001} {20111,5101} {20202,101}",
-  "{20104,55601}": "{20104,51301} {20111,5103} {20202,101}",
-  "{20104,55701}": "{20104,51301} {20111,5102} {20202,101} ",
-  "{20104,55901}": "{20104,55801} {20111,5101} {20202,101} ",
-  "{20104,56101}": "{20104,56001} {20111,5101} {20202,101} ",
+  "{20104,30101}": "Hábitat S Argon",
+  "{20104,30201}": "Hábitat M Argon",
+  "{20104,30301}": "Hábitat L Argon",
+  "{20104,30401}": "Cúpula S Paranid",
+  "{20104,30501}": "Cúpula M Paranid",
+  "{20104,30601}": "Cúpula L Paranid",
+  "{20104,30701}": "Bioma S Teladi",
+  "{20104,30801}": "Bioma M Teladi",
+  "{20104,30901}": "Bioma L Teladi",
+  "{20104,40101}": "Centro Administrativo Argon",
+  "{20104,40201}": "Centro Administrativo Paranid",
+  "{20104,40301}": "Centro Administrativo Teladi",
+  "{20104,40601}": "Plataforma de Defensa en Disco Argon",
+  "{20104,40701}": "Plataforma de Defensa en Disco Paranid",
+  "{20104,40801}": "Plataforma de Defensa en Disco Teladi",
+  "{20104,41101}": "Plataforma de Defensa en Puente Argon",
+  "{20104,41201}": "Plataforma de Defensa en Puente Paranid",
+  "{20104,41301}": "Plataforma de Defensa en Puente Teladi",
+  "{20104,41601}": "Capital de la Facción Paranid",
+  "{20104,50101}": "Argon Estructura Básica de Conexión 01",
+  "{20104,50201}": "Argon Estructura Básica de Conexión 02",
+  "{20104,50301}": "Argon Estructura Básica de Conexión 03",
+  "{20104,50401}": "Estructura Básica de Conexión 01 Paranid",
+  "{20104,50501}": "Estructura Básica de Conexión 02 Paranid",
+  "{20104,50601}": "Estructura Básica de Conexión 03 Paranid",
+  "{20104,50701}": "Estructura Básica de Conexión 01 Teladi",
+  "{20104,50801}": "Estructura Básica de Conexión 02 Teladi",
+  "{20104,50901}": "Estructura Básica de Conexión 03 Teladi",
+  "{20104,51401}": "Estructura de Conexión en Cruz 01 Argon",
+  "{20104,51501}": "Estructura de Conexión en Cruz 01 Paranid",
+  "{20104,51601}": "Estructura de Conexión en Cruz 02 Paranid",
+  "{20104,51701}": "Estructura de Conexión en Y 01 Paranid",
+  "{20104,51801}": "Estructura de Conexión en Cruz 01 Teladi",
+  "{20104,52101}": "Estructura de Conexión Vertical 01 Argon",
+  "{20104,52201}": "Estructura de Conexión Vertical 02 Argon",
+  "{20104,52301}": "Estructura de Conexión Vertical 01 Paranid",
+  "{20104,52401}": "Estructura de Conexión Vertical 02 Paranid",
+  "{20104,52501}": "Estructura de Conexión Vertical 01 Teladi",
+  "{20104,52601}": "Estructura de Conexión Vertical 02 Teladi",
+  "{20104,52901}": "Estructura Básica de Conexión Incursión 01",
+  "{20104,53001}": "Incursión Estructura Básica de Conexión 02",
+  "{20104,53101}": "Estructura Básica de Conexión Incursión 03",
+  "{20104,53201}": "Estructura de Conexión en Cruz Incursión 01",
+  "{20104,53301}": "Estructura de Conexión Vertical Incursión 01",
+  "{20104,53401}": "Estructura de Conexión Vertical Incursión 02",
+  "{20104,55501}": "Estructura de Conexión de Arco 01 Argon",
+  "{20104,55601}": "Estructura de Conexión en Cruz 03 Argon",
+  "{20104,55701}": "Estructura de Conexión en Cruz 02 Argon",
+  "{20104,55901}": "Estructura de Conexión en L 01 Argon",
+  "{20104,56101}": "Estructura de Conexión en T 01 Argon",
   "{20104,60101}": "Bahía de Fabricación de Naves S",
   "{20104,60201}": "Bahía de Fabricación de Naves M",
   "{20104,60301}": "Bahía de Fabricación de Naves L",
@@ -164,30 +164,30 @@
   "{20104,61201}": "Matriz de Montaje de Nave XL",
   "{20104,61301}": "Bahía de Fabricación de Nave S/M",
   "{20104,61401}": "Bahía de Mantenimiento de Nave S/M",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70001} {20111,5301} {20104,70003}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70001} {20111,5302} {20104,70003}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70001} {20111,5303} {20104,70003}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70001} {20111,5301} {20104,70004}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70001} {20111,5302} {20104,70004}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70001} {20111,5303} {20104,70004}",
-  "{20104,70801}": "(S/M Venture Sendoff Dock){20104,70701} {20111,5011}/{20111,5021}",
-  "{20104,70901}": "(L/XL Venture Sendoff Dock){20104,70701} {20111,5031}/{20111,5041}",
+  "{20104,70101}": "Area de Atraque Básico 1M6S",
+  "{20104,70201}": "Area de Atraque Estándar 1M6S",
+  "{20104,70301}": "Area de Atraque Lujo 1M6S",
+  "{20104,70401}": "Area de Atraque Básico 3M6S",
+  "{20104,70501}": "Area de Atraque Estándar 3M6S",
+  "{20104,70601}": "Area de Atraque Lujo 3M6S",
+  "{20104,70801}": "Muelle de Envío de Incursiones S/M",
+  "{20104,70901}": "Muelle de Envío de Incursiones L/XL",
   "{20104,71001}": "Muelle xenon",
-  "{20104,71201}": "(Argon 1-Dock Pier){20104,71101} {20202,101} {20104,71103}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20104,71101} {20202,101} {20104,71104}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20104,71101} {20202,101} {20104,71105}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20104,71101} {20202,401} {20104,71103}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20104,71101} {20202,401} {20104,71104}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20104,71101} {20202,401} {20104,71105}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20104,71101} {20202,501} {20104,71103}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20104,71101} {20202,501} {20104,71104}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20104,71101} {20202,501} {20104,71105}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70001} {20111,5303} {20104,70005}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20104,71101} {20102,1111} {20104,71103}",
-  "{20104,74901}": "{20104,71101} {20104,71109} {20202,101}",
+  "{20104,71201}": "Embarcadero Argon Muelle-1",
+  "{20104,71301}": "Embarcadero Argon Muelle-3 T",
+  "{20104,71401}": "Embarcadero Argon Muelle-3 E",
+  "{20104,71501}": "Embarcadero Paranid Muelle-1",
+  "{20104,71601}": "Embarcadero Paranid Muelle-3 T",
+  "{20104,71701}": "Embarcadero Paranid Muelle-3 E",
+  "{20104,71801}": "Embarcadero Teladi Muelle-1",
+  "{20104,71901}": "Embarcadero Teladi Muelle-3 T",
+  "{20104,72001}": "Embarcadero Teladi Muelle-3 E",
+  "{20104,73301}": "Area de Atraque Lujo 8M",
+  "{20104,73401}": "Embarcadero Estación Comercial Argon Muelle-1",
+  "{20104,74901}": "Embarcadero Sin un muelle Argon",
   "{20201,101}": "Electrónicos Avanzados",
   "{20201,1101}": "Raciones de Comida",
-  "{20201,1201}": "Partes de Casco (Cuadernas me gusta mas)",
+  "{20201,1201}": "Partes de Casco",
   "{20201,1301}": "Hidrógeno",
   "{20201,1401}": "Hielo",
   "{20201,1501}": "Grafeno",
@@ -220,7 +220,7 @@
   "{20201,4101}": "Hierba Espacial",
   "{20201,4201}": "Especias",
   "{20201,4301}": "Flores del Amanecer",
-  "{20201,4401}": "Planta de Pantano ( otra opción )",
+  "{20201,4401}": "Planta de Pantano",
   "{20201,4501}": "Teladianium",
   "{20201,4601}": "Componentes de Torretas",
   "{20201,4701}": "Agua",
