--- a/src/assets/game_data/Timelines (7.10)/locales/fr.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "Quartiers généraux",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "Production de composites avancés",
   "{20104,100101}": "Extension d'anneau d'Habitat",
   "{20104,100201}": "Colonne d'anneau d'Habitat",
@@ -11,11 +11,11 @@
   "{20104,100801}": "Réseau de capteurs",
   "{20104,100901}": "Zone de maintenance",
   "{20104,101001}": "Ventilation",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20202,501} {20104,10001}",
+  "{20104,10101}": "Teladi Production de composites avancés",
   "{20104,101101}": "Support structurel",
   "{20104,101201}": "Relais de commande",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "Stockage d'Habitat A",
+  "{20104,101306}": "Stockage d'Habitat B",
   "{20104,101401}": "Anneau d'Habitat",
   "{20104,101601}": "Module inconnu",
   "{20104,101801}": "Module de base Xénon",
@@ -25,23 +25,23 @@
   "{20104,102101}": "Attache d'anneau d'Habitat",
   "{20104,102201}": "Section de service d'Habitat",
   "{20104,10301}": "Production de cellules d'antimatière",
-  "{20104,103601}": "Terrasse d'observation(attention, penthouse décrit la \"baie\" d'observation, cf discor)",
-  "{20104,103701}": "Dôme d'observation(attention, conservatory décrit la \"baie\" d'observation, cf discor)",
+  "{20104,103601}": "Terrasse d'observation",
+  "{20104,103701}": "Dôme d'observation",
   "{20104,103801}": "Pavillion d'observation",
   "{20104,10401}": "Production de convertisseur d'antimatière",
   "{20104,10501}": "Production de nanobots",
   "{20104,10701}": "Production de composants de drones",
   "{20104,10801}": "Production de photopiles",
   "{20104,10901}": "Production de pièces de moteur",
-  "{20104,11001}": "(Teladi Engine Part Production){20202,501} {20104,10901}",
+  "{20104,11001}": "Teladi Production de pièces de moteur",
   "{20104,110201}": "Arène des paris",
   "{20104,11101}": "Production de bobines de champ",
   "{20104,11201}": "Production de graphène",
   "{20104,11301}": "Production de pièces de coque",
-  "{20104,11401}": "(Teladi Hull Part Production){20202,501} {20104,11301}",
-  "{20104,11601}": "(Argon Medical Supply Production){20202,101} {20104,11501}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20202,401} {20104,11501}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20202,501} {20104,11501}",
+  "{20104,11401}": "Teladi Production de pièces de coque",
+  "{20104,11601}": "Argon Production de fournitures médicales",
+  "{20104,11701}": "Paranide Production de fournitures médicales",
+  "{20104,11801}": "Teladi Production de fournitures médicales",
   "{20104,11901}": "Production de circuits intégrés",
   "{20104,12001}": "Production de composants de missile",
   "{20104,120101}": "Transformateur de ferraille",
@@ -49,7 +49,7 @@
   "{20104,12201}": "Production de tubes quantiques",
   "{20104,12301}": "Production de métal raffiné",
   "{20104,12401}": "Production d'ensemble de scanners",
-  "{20104,12501}": "(Teladi Scanning Array Production){20202,501} {20104,12401}",
+  "{20104,12501}": "Teladi Production d'ensemble de scanners",
   "{20104,12601}": "Production de composants de bouclier",
   "{20104,12701}": "Production de tranches de silicium",
   "{20104,12801}": "Production de puces intelligentes",
@@ -74,85 +74,85 @@
   "{20104,14601}": "Production de teladianium",
   "{20104,14701}": "Matrice de panneaux solaires",
   "{20104,150101}": "Réseau de capteurs à portée étendue",
-  "{20104,20101}": "(Argon S Container Storage){20202,101} {20111,5011} {20104,20001}",
-  "{20104,20201}": "(Argon M Container Storage){20202,101} {20111,5021} {20104,20001}",
-  "{20104,20301}": "(Argon L Container Storage){20202,101} {20111,5031} {20104,20001}",
-  "{20104,20401}": "(Paranid S Container Storage){20202,401} {20111,5011} {20104,20001}",
-  "{20104,20501}": "(Paranid M Container Storage){20202,401} {20111,5021} {20104,20001}",
-  "{20104,20601}": "(Paranid L Container Storage){20202,401} {20111,5031} {20104,20001}",
-  "{20104,20701}": "(Teladi S Container Storage){20202,501} {20111,5011} {20104,20001}",
-  "{20104,20801}": "(Teladi M Container Storage){20202,501} {20111,5021} {20104,20001}",
-  "{20104,20901}": "(Teladi L Container Storage){20202,501} {20111,5031} {20104,20001}",
-  "{20104,21101}": "(Argon S Liquid Storage){20202,101} {20111,5011} {20104,21001}",
-  "{20104,21201}": "(Argon M Liquid Storage){20202,101} {20111,5021} {20104,21001}",
-  "{20104,21301}": "(Argon L Liquid Storage){20202,101} {20111,5031} {20104,21001}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20202,401} {20111,5011} {20104,21001}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20202,401} {20111,5021} {20104,21001}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20202,401} {20111,5031} {20104,21001}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20202,501} {20111,5011} {20104,21001}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20202,501} {20111,5021} {20104,21001}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20202,501} {20111,5031} {20104,21001}",
-  "{20104,22101}": "(Argon S Solid Storage){20202,101} {20111,5011} {20104,22001}",
-  "{20104,22201}": "(Argon M Solid Storage){20202,101} {20111,5021} {20104,22001}",
-  "{20104,22301}": "(Argon L Solid Storage){20202,101} {20111,5031} {20104,22001}",
-  "{20104,22401}": "(Paranid S Solid Storage){20202,401} {20111,5011} {20104,22001}",
-  "{20104,22501}": "(Paranid M Solid Storage){20202,401} {20111,5021} {20104,22001}",
-  "{20104,22601}": "(Paranid L Solid Storage){20202,401} {20111,5031} {20104,22001}",
-  "{20104,22701}": "(Teladi S Solid Storage){20202,501} {20111,5011} {20104,22001}",
-  "{20104,22801}": "(Teladi M Solid Storage){20202,501} {20111,5021} {20104,22001}",
-  "{20104,22901}": "(Teladi L Solid Storage){20202,501} {20111,5031} {20104,22001}",
-  "{20104,23301}": "(Argon L Universal Storage){20202,101} {20111,5031} {20104,23001}",
+  "{20104,20101}": "Argon S Stockage de conteneurs",
+  "{20104,20201}": "Argon M Stockage de conteneurs",
+  "{20104,20301}": "Argon L Stockage de conteneurs",
+  "{20104,20401}": "Paranide S Stockage de conteneurs",
+  "{20104,20501}": "Paranide M Stockage de conteneurs",
+  "{20104,20601}": "Paranide L Stockage de conteneurs",
+  "{20104,20701}": "Teladi S Stockage de conteneurs",
+  "{20104,20801}": "Teladi M Stockage de conteneurs",
+  "{20104,20901}": "Teladi L Stockage de conteneurs",
+  "{20104,21101}": "Argon S Stockage de liquide",
+  "{20104,21201}": "Argon M Stockage de liquide",
+  "{20104,21301}": "Argon L Stockage de liquide",
+  "{20104,21401}": "Paranide S Stockage de liquide",
+  "{20104,21501}": "Paranide M Stockage de liquide",
+  "{20104,21601}": "Paranide L Stockage de liquide",
+  "{20104,21701}": "Teladi S Stockage de liquide",
+  "{20104,21801}": "Teladi M Stockage de liquide",
+  "{20104,21901}": "Teladi L Stockage de liquide",
+  "{20104,22101}": "Argon S Stockage de solide",
+  "{20104,22201}": "Argon M Stockage de solide",
+  "{20104,22301}": "Argon L Stockage de solide",
+  "{20104,22401}": "Paranide S Stockage de solide",
+  "{20104,22501}": "Paranide M Stockage de solide",
+  "{20104,22601}": "Paranide L Stockage de solide",
+  "{20104,22701}": "Teladi S Stockage de solide",
+  "{20104,22801}": "Teladi M Stockage de solide",
+  "{20104,22901}": "Teladi L Stockage de solide",
+  "{20104,23301}": "Argon L Stockage universel",
   "{20104,24001}": "Stockage de matrices",
-  "{20104,30101}": "(Argon S Habitat){20202,101} {20111,5011} {20104,30103}",
-  "{20104,30201}": "(Argon M Habitat){20202,101} {20111,5021} {20104,30203}",
-  "{20104,30301}": "(Argon L Habitat){20202,101} {20111,5031} {20104,30303}",
-  "{20104,30401}": "(Paranid S Dome){20202,401} {20111,5011} {20104,30403}",
-  "{20104,30501}": "(Paranid M Dome){20202,401} {20111,5021} {20104,30503}",
-  "{20104,30601}": "(Paranid L Dome){20202,401} {20111,5031} {20104,30603}",
-  "{20104,30701}": "(Teladi S Biome){20202,501} {20111,5011} {20104,30703}",
-  "{20104,30801}": "(Teladi M Biome){20202,501} {20111,5021} {20104,30803}",
-  "{20104,30901}": "(Teladi L Biome){20202,501} {20111,5031} {20104,30903}",
-  "{20104,40101}": "(Argon Administrative Centre){20202,101} {20104,40001}",
-  "{20104,40201}": "(Paranid Administrative Centre){20202,401} {20104,40001}",
-  "{20104,40301}": "(Teladi Administrative Centre){20202,501} {20104,40001}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20202,101} {20104,40501}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20202,401} {20104,40501}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20202,501} {20104,40501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20202,101} {20104,41001}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20202,401} {20104,41001}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20202,501} {20104,41001}",
-  "{20104,41601}": "(Paranid Faction Capital){20104,41501} {20202,401}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20202,101} {20104,50001} {20111,5101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20202,101} {20104,50001} {20111,5102}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20202,101} {20104,50001} {20111,5103}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20202,401} {20104,50001} {20111,5101}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20202,401} {20104,50001} {20111,5102}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20202,401} {20104,50001} {20111,5103}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20202,501} {20104,50001} {20111,5101}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20202,501} {20104,50001} {20111,5102}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20202,501} {20104,50001} {20111,5103}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20202,101} {20104,51301} {20111,5101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20202,401} {20104,51301} {20111,5101}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20202,401} {20104,51301} {20111,5102}",
-  "{20104,51701}": "(Paranid Y Connection Structure 01){20202,401} {20104,56201} {20111,5101}",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20202,501} {20104,51301} {20111,5101}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20202,101} {20104,52001} {20111,5101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20202,101} {20104,52001} {20111,5102}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20202,401} {20104,52001} {20111,5101}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20202,401} {20104,52001} {20111,5102}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20202,501} {20104,52001} {20111,5101}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20202,501} {20104,52001} {20111,5102}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20104,50001} {20111,5101} {20111,6001}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20104,50001} {20111,5102} {20111,6001}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20104,50001} {20111,5103} {20111,6001}",
-  "{20104,53201}": "(Venture Cross Connection 01){20104,51301} {20111,5101} {20111,6001}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20104,52001} {20111,5101} {20111,6001}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20104,52001} {20111,5102} {20111,6001}",
-  "{20104,55501}": "(Structure de connexion de l'arc à l'argon 01){20202,101} {20104,55001} {20111,5101}",
-  "{20104,55601}": "(Argon Cross Connection Structure 03){20202,101} {20104,51301} {20111,5103}",
-  "{20104,55701}": "(Argon Cross Connection Structure 02){20202,101} {20104,51301} {20111,5102}",
-  "{20104,55901}": "(Structure de connexion Argon L 01){20202,101} {20104,55801} {20111,5101}",
-  "{20104,56101}": "(Argon T Connection Structure 01){20202,101} {20104,56001} {20111,5101}",
+  "{20104,30101}": "Argon S Habitat",
+  "{20104,30201}": "Argon M Habitat",
+  "{20104,30301}": "Argon L Habitat",
+  "{20104,30401}": "Paranide S Dome",
+  "{20104,30501}": "Paranide M Dome",
+  "{20104,30601}": "Paranide L Dome",
+  "{20104,30701}": "Teladi S Biome",
+  "{20104,30801}": "Teladi M Biome",
+  "{20104,30901}": "Teladi L Biome",
+  "{20104,40101}": "Argon Centre administratif",
+  "{20104,40201}": "Paranide Centre administratif",
+  "{20104,40301}": "Teladi Centre administratif",
+  "{20104,40601}": "Argon Plateforme de défense circulaire",
+  "{20104,40701}": "Paranide Plateforme de défense circulaire",
+  "{20104,40801}": "Teladi Plateforme de défense circulaire",
+  "{20104,41101}": "Argon Plateforme de défense linéaire",
+  "{20104,41201}": "Paranide Plateforme de défense linéaire",
+  "{20104,41301}": "Teladi Plateforme de défense linéaire",
+  "{20104,41601}": "Capitale de la faction Paranide",
+  "{20104,50101}": "Argon Structure de connexion basique 01",
+  "{20104,50201}": "Argon Structure de connexion basique 02",
+  "{20104,50301}": "Argon Structure de connexion basique 03",
+  "{20104,50401}": "Paranide Structure de connexion basique 01",
+  "{20104,50501}": "Paranide Structure de connexion basique 02",
+  "{20104,50601}": "Paranide Structure de connexion basique 03",
+  "{20104,50701}": "Teladi Structure de connexion basique 01",
+  "{20104,50801}": "Teladi Structure de connexion basique 02",
+  "{20104,50901}": "Teladi Structure de connexion basique 03",
+  "{20104,51401}": "Argon Structure de connexion en croix 01",
+  "{20104,51501}": "Paranide Structure de connexion en croix 01",
+  "{20104,51601}": "Paranide Structure de connexion en croix 02",
+  "{20104,51701}": "Paranide Structure de connexion en Y 01",
+  "{20104,51801}": "Teladi Structure de connexion en croix 01",
+  "{20104,52101}": "Argon Structure de connexion verticale 01",
+  "{20104,52201}": "Argon Structure de connexion verticale 02",
+  "{20104,52301}": "Paranide Structure de connexion verticale 01",
+  "{20104,52401}": "Paranide Structure de connexion verticale 02",
+  "{20104,52501}": "Teladi Structure de connexion verticale 01",
+  "{20104,52601}": "Teladi Structure de connexion verticale 02",
+  "{20104,52901}": "Structure de connexion basique 01 Aventure",
+  "{20104,53001}": "Structure de connexion basique 02 Aventure",
+  "{20104,53101}": "Structure de connexion basique 03 Aventure",
+  "{20104,53201}": "Structure de connexion en croix 01 Aventure",
+  "{20104,53301}": "Structure de connexion verticale 01 Aventure",
+  "{20104,53401}": "Structure de connexion verticale 02 Aventure",
+  "{20104,55501}": "Argon Structure de connexion en arc 01",
+  "{20104,55601}": "Argon Structure de connexion en croix 03",
+  "{20104,55701}": "Argon Structure de connexion en croix 02",
+  "{20104,55901}": "Argon Structure de connexion en L 01",
+  "{20104,56101}": "Argon Structure de connexion en T 01",
   "{20104,60101}": "Baie de fabrication de vaisseaux de classe S",
   "{20104,60201}": "Baie de fabrication de vaisseaux de classe M",
   "{20104,60301}": "Baie de fabrication de vaisseaux de classe L",
@@ -164,27 +164,27 @@
   "{20104,61201}": "Matrice d'assemblage de vaisseaux de classe XL",
   "{20104,61301}": "Baie de fabrication de vaisseaux de classe S/M",
   "{20104,61401}": "Baie de maintenance de vaisseaux de classe S/M",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70003} {20111,5301} {20104,70001}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70003} {20111,5302} {20104,70001}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70003} {20104,70001} {20111,5303}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70004} {20111,5301} {20104,70001}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70004} {20111,5302} {20104,70001}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70004} {20111,5303} {20104,70001}",
-  "{20104,70801}": "(S/M Venture Sendoff Dock){20111,5011}/{20111,5021} {20104,70701}",
-  "{20104,70901}": "(L/XL Venture Sendoff Dock){20111,5031}/{20111,5041} {20104,70701}",
+  "{20104,70101}": "1M 6S Basique Zone d'amarrage",
+  "{20104,70201}": "1M 6S Standard Zone d'amarrage",
+  "{20104,70301}": "1M 6S Zone d'amarrage de luxe",
+  "{20104,70401}": "3M 6S Basique Zone d'amarrage",
+  "{20104,70501}": "3M 6S Standard Zone d'amarrage",
+  "{20104,70601}": "3M 6S de luxe Zone d'amarrage",
+  "{20104,70801}": "S/M Dock de départ d'aventure",
+  "{20104,70901}": "L/XL Dock de départ d'aventure",
   "{20104,71001}": "Dock Xénon",
-  "{20104,71201}": "(Argon 1-Dock Pier){20202,101} {20104,71103} {20104,71101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20202,101} {20104,71104} {20104,71101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20202,101} {20104,71105} {20104,71101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20202,401} {20104,71103} {20104,71101}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20202,401} {20104,71104} {20104,71101}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20202,401} {20104,71105} {20104,71101}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20202,501} {20104,71103} {20104,71101}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20202,501} {20104,71104} {20104,71101}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20202,501} {20104,71105} {20104,71101}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70005} {20111,5303} {20104,70001}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20102,1111} {20104,71103} {20104,71101}",
-  "{20104,74901}": "(Argon 1-Dock Short Pier){20202,101} {20104,71109} {20104,71101}",
+  "{20104,71201}": "Argon 1-Dock Jetée",
+  "{20104,71301}": "Argon 3-Dock T Jetée",
+  "{20104,71401}": "Argon 3-Dock E Jetée",
+  "{20104,71501}": "Paranide 1-Dock Jetée",
+  "{20104,71601}": "Paranide 3-Dock T Jetée",
+  "{20104,71701}": "Paranide 3-Dock E Jetée",
+  "{20104,71801}": "Teladi 1-Dock Jetée",
+  "{20104,71901}": "Teladi 3-Dock T Jetée",
+  "{20104,72001}": "Teladi 3-Dock E Jetée",
+  "{20104,73301}": "8M de luxe Zone d'amarrage",
+  "{20104,73401}": "Station commerciale argonne 1-Dock Jetée",
+  "{20104,74901}": "Argon 1-Dock Court Jetée",
   "{20201,101}": "Composants électroniques avancés",
   "{20201,1101}": "Ration de nourriture",
   "{20201,1201}": "Pièces de coque",
