--- a/src/assets/game_data/Timelines (7.10)/locales/it.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/it.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "Quartier Generale",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "Produzione di Compositi Avanzati",
   "{20104,100101}": "Estensione dell'Anello dell'Habitat",
   "{20104,100201}": "Colonna dell'Anello dell'Habitat",
@@ -11,11 +11,11 @@
   "{20104,100801}": "Apparato di Sensori",
   "{20104,100901}": "Area di Manutenzione",
   "{20104,101001}": "Ventilazione",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20104,10001} {20202,501}",
+  "{20104,10101}": "Produzione di Compositi Avanzati Teladi",
   "{20104,101101}": "Struttura di Supporto",
   "{20104,101201}": "Ripetitore di Comando",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "Magazzino dell'Habitat A",
+  "{20104,101306}": "Magazzino dell'Habitat B",
   "{20104,101401}": "Anello dell'Habitat",
   "{20104,101601}": "Modulo Sconosciuto",
   "{20104,101801}": "Modulo di Base Xenon",
@@ -25,23 +25,23 @@
   "{20104,102101}": "Morsa ad Anello dell'Habitat",
   "{20104,102201}": "Sezione di Servizio dell'Habitat",
   "{20104,10301}": "Produzione di Celle ad Antimateria",
-  "{20104,103601}": "Ponte di Osservazione con Attico(on top/bottom of station)",
-  "{20104,103701}": "Ponte d'Osservazione con Vetrata(on side of station)",
-  "{20104,103801}": "Padiglione Osservatorio(on side of station, vertical)",
+  "{20104,103601}": "Ponte di Osservazione con Attico",
+  "{20104,103701}": "Ponte d'Osservazione con Vetrata",
+  "{20104,103801}": "Padiglione Osservatorio",
   "{20104,10401}": "Produzione di Convertitori di Antimateria",
   "{20104,10501}": "Produzione di Claytronica",
   "{20104,10701}": "Produzione di Parti per Droni",
   "{20104,10801}": "Produzione di Celle di Energia",
   "{20104,10901}": "Produzione di Parti per Motori",
-  "{20104,11001}": "(Teladi Engine Part Production){20104,10901} {20202,501}",
+  "{20104,11001}": "Produzione di Parti per Motori Teladi",
   "{20104,110201}": "Sala Scommesse",
   "{20104,11101}": "Produzione di Bobine di Campo",
   "{20104,11201}": "Produzione di Grafene",
   "{20104,11301}": "Produzione di Parti per Scafi",
-  "{20104,11401}": "(Teladi Hull Part Production){20104,11301} {20202,501}",
-  "{20104,11601}": "(Argon Medical Supply Production){20104,11501} {20202,101}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20104,11501} {20202,401}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20104,11501} {20202,501}",
+  "{20104,11401}": "Produzione di Parti per Scafi Teladi",
+  "{20104,11601}": "Produzione di Forniture Mediche Argon",
+  "{20104,11701}": "Produzione di Forniture Mediche Paranid",
+  "{20104,11801}": "Produzione di Forniture Mediche Teladi",
   "{20104,11901}": "Produzione di Microchip",
   "{20104,12001}": "Produzione di Parti per Missili",
   "{20104,120101}": "Trasformatore di Rottami",
@@ -49,7 +49,7 @@
   "{20104,12201}": "Produzione di Tubi Quantici",
   "{20104,12301}": "Produzione di Metalli Raffinati",
   "{20104,12401}": "Produzione di Sistemi di Scansione",
-  "{20104,12501}": "(Teladi Scanning Array Production){20104,12401} {20202,501}",
+  "{20104,12501}": "Produzione di Sistemi di Scansione Teladi",
   "{20104,12601}": "Produzione di Parti per Scudi",
   "{20104,12701}": "Produzione di Wafer di Silicio",
   "{20104,12801}": "Produzione di Chip Intelligenti",
@@ -74,85 +74,85 @@
   "{20104,14601}": "Produzione di Teladianium",
   "{20104,14701}": "Pannelli Solari della Matrice",
   "{20104,150101}": "Sensori ad Ampio Raggio",
-  "{20104,20101}": "(Argon S Container Storage){20104,20001} {20202,101} {20111,5011}",
-  "{20104,20201}": "(Argon M Container Storage){20104,20001} {20202,101} {20111,5021}",
-  "{20104,20301}": "(Argon L Container Storage){20104,20001} {20202,101} {20111,5031}",
-  "{20104,20401}": "(Paranid S Container Storage){20104,20001} {20202,401} {20111,5011}",
-  "{20104,20501}": "(Paranid M Container Storage){20104,20001} {20202,401} {20111,5021}",
-  "{20104,20601}": "(Paranid L Container Storage){20104,20001} {20202,401} {20111,5031}",
-  "{20104,20701}": "(Teladi S Container Storage){20104,20001} {20202,501} {20111,5011}",
-  "{20104,20801}": "(Teladi M Container Storage){20104,20001} {20202,501} {20111,5021}",
-  "{20104,20901}": "(Teladi L Container Storage){20104,20001} {20202,501} {20111,5031}",
-  "{20104,21101}": "(Argon S Liquid Storage){20104,21001} {20202,101} {20111,5011}",
-  "{20104,21201}": "(Argon M Liquid Storage){20104,21001} {20202,101} {20111,5021}",
-  "{20104,21301}": "(Argon L Liquid Storage){20104,21001} {20202,101} {20111,5031}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20104,21001} {20202,401} {20111,5011}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20104,21001} {20202,401} {20111,5021}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20104,21001} {20202,401} {20111,5031}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20104,21001} {20202,501} {20111,5011}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20104,21001} {20202,501} {20111,5021}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20104,21001} {20202,501} {20111,5031}",
-  "{20104,22101}": "(Argon S Solid Storage){20104,22001} {20202,101} {20111,5011}",
-  "{20104,22201}": "(Argon M Solid Storage){20104,22001} {20202,101} {20111,5021}",
-  "{20104,22301}": "(Argon L Solid Storage){20104,22001} {20202,101} {20111,5031}",
-  "{20104,22401}": "(Paranid S Solid Storage){20104,22001} {20202,401} {20111,5011}",
-  "{20104,22501}": "(Paranid M Solid Storage){20104,22001} {20202,401} {20111,5021}",
-  "{20104,22601}": "(Paranid L Solid Storage){20104,22001} {20202,401} {20111,5031}",
-  "{20104,22701}": "(Teladi S Solid Storage){20104,22001} {20202,501} {20111,5011}",
-  "{20104,22801}": "(Teladi M Solid Storage){20104,22001} {20202,501} {20111,5021}",
-  "{20104,22901}": "(Teladi L Solid Storage){20104,22001} {20202,501} {20111,5031}",
-  "{20104,23301}": "(Argon L Universal Storage){20104,23001} {20202,101} {20111,5031}",
+  "{20104,20101}": "Magazzino Container Argon S",
+  "{20104,20201}": "Magazzino Container Argon M",
+  "{20104,20301}": "Magazzino Container Argon L",
+  "{20104,20401}": "Magazzino Container Paranid S",
+  "{20104,20501}": "Magazzino Container Paranid M",
+  "{20104,20601}": "Magazzino Container Paranid L",
+  "{20104,20701}": "Magazzino Container Teladi S",
+  "{20104,20801}": "Magazzino Container Teladi M",
+  "{20104,20901}": "Magazzino Container Teladi L",
+  "{20104,21101}": "Magazzino Liquidi Argon S",
+  "{20104,21201}": "Magazzino Liquidi Argon M",
+  "{20104,21301}": "Magazzino Liquidi Argon L",
+  "{20104,21401}": "Magazzino Liquidi Paranid S",
+  "{20104,21501}": "Magazzino Liquidi Paranid M",
+  "{20104,21601}": "Magazzino Liquidi Paranid L",
+  "{20104,21701}": "Magazzino Liquidi Teladi S",
+  "{20104,21801}": "Magazzino Liquidi Teladi M",
+  "{20104,21901}": "Magazzino Liquidi Teladi L",
+  "{20104,22101}": "Magazzino Solidi Argon S",
+  "{20104,22201}": "Magazzino Solidi Argon M",
+  "{20104,22301}": "Magazzino Solidi Argon L",
+  "{20104,22401}": "Magazzino Solidi Paranid S",
+  "{20104,22501}": "Magazzino Solidi Paranid M",
+  "{20104,22601}": "Magazzino Solidi Paranid L",
+  "{20104,22701}": "Magazzino Solidi Teladi S",
+  "{20104,22801}": "Magazzino Solidi Teladi M",
+  "{20104,22901}": "Magazzino Solidi Teladi L",
+  "{20104,23301}": "Magazzino Universale Argon L",
   "{20104,24001}": "Magazzino della Matrice",
-  "{20104,30101}": "(Argon S Habitat){20104,30103} {20202,101} {20111,5011}",
-  "{20104,30201}": "(Argon M Habitat){20104,30203} {20202,101} {20111,5021}",
-  "{20104,30301}": "(Argon L Habitat){20104,30303} {20202,101} {20111,5031}",
-  "{20104,30401}": "(Paranid S Dome){20104,30403} {20202,401} {20111,5011}",
-  "{20104,30501}": "(Paranid M Dome){20104,30503} {20202,401} {20111,5021}",
-  "{20104,30601}": "(Paranid L Dome){20104,30603} {20202,401} {20111,5031}",
-  "{20104,30701}": "(Teladi S Biome){20104,30703} {20202,501} {20111,5011}",
-  "{20104,30801}": "(Teladi M Biome){20104,30803} {20202,501} {20111,5021}",
-  "{20104,30901}": "(Teladi L Biome){20104,30903} {20202,501} {20111,5031}",
-  "{20104,40101}": "(Argon Administrative Centre){20104,40001} {20202,101}",
-  "{20104,40201}": "(Paranid Administrative Centre){20104,40001} {20202,401}",
-  "{20104,40301}": "(Teladi Administrative Centre){20104,40001} {20202,501}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20104,40501} {20202,101}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20104,40501} {20202,401}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20104,40501} {20202,501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20104,41001} {20202,101}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20104,41001} {20202,401}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20104,41001} {20202,501}",
-  "{20104,41601}": "(Paranid Faction Capital){20104,41501} {20202,401}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20104,50001} {20202,101} {20111,5101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20104,50001} {20202,101} {20111,5102}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20104,50001} {20202,101} {20111,5103}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20104,50001} {20202,401} {20111,5101}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20104,50001} {20202,401} {20111,5102}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20104,50001} {20202,401} {20111,5103}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20104,50001} {20202,501} {20111,5101}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20104,50001} {20202,501} {20111,5102}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20104,50001} {20202,501} {20111,5103}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20104,51301} {20202,101} {20111,5101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20104,51301} {20202,401} {20111,5101}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20104,51301} {20202,401} {20111,5102}",
-  "{20104,51701}": "(Paranid Y Connection Structure 01){20104,56201} {20202,401} {20111,5101}",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20104,51301} {20202,501} {20111,5101}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20104,52001} {20202,101} {20111,5101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20104,52001} {20202,101} {20111,5102}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20104,52001} {20202,401} {20111,5101}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20104,52001} {20202,401} {20111,5102}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20104,52001} {20202,501} {20111,5101}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20104,52001} {20202,501} {20111,5102}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20104,50001} per {20111,6001} {20111,5101}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20104,50001} per {20111,6001} {20111,5102}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20104,50001} per {20111,6001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20104,51301} per {20111,6001} {20111,5101}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20104,52001} per {20111,6001} {20111,5101}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20104,52001} per {20111,6001} {20111,5102}",
-  "{20104,55501}": "(Argon Arc Connection Structure 01){20104,55001} {20202,101} {20111,5101}",
-  "{20104,55601}": "(Argon Cross Connection Structure 03){20104,51301} {20202,101} {20111,5103}",
-  "{20104,55701}": "(Argon Cross Connection Structure 02){20104,51301} {20202,101} {20111,5102}",
-  "{20104,55901}": "(Argon L Connection Structure 01){20104,55801} {20202,101} {20111,5101}",
-  "{20104,56101}": "(Argon T Connection Structure 01){20104,56001} {20202,101} {20111,5101}",
+  "{20104,30101}": "Habitat Argon S",
+  "{20104,30201}": "Habitat Argon M",
+  "{20104,30301}": "Habitat Argon L",
+  "{20104,30401}": "Cupola Paranid S",
+  "{20104,30501}": "Cupola Paranid M",
+  "{20104,30601}": "Cupola Paranid L",
+  "{20104,30701}": "Bioma Teladi S",
+  "{20104,30801}": "Bioma Teladi M",
+  "{20104,30901}": "Bioma Teladi L",
+  "{20104,40101}": "Centro Amministrativo Argon",
+  "{20104,40201}": "Centro Amministrativo Paranid",
+  "{20104,40301}": "Centro Amministrativo Teladi",
+  "{20104,40601}": "Piattaforma Difensiva a Disco Argon",
+  "{20104,40701}": "Piattaforma Difensiva a Disco Paranid",
+  "{20104,40801}": "Piattaforma Difensiva a Disco Teladi",
+  "{20104,41101}": "Piattaforma Difensiva a Ponte Argon",
+  "{20104,41201}": "Piattaforma Difensiva a Ponte Paranid",
+  "{20104,41301}": "Piattaforma Difensiva a Ponte Teladi",
+  "{20104,41601}": "Sede di Fazione Paranid",
+  "{20104,50101}": "Struttura di Connessione di Base Argon 01",
+  "{20104,50201}": "Struttura di Connessione di Base Argon 02",
+  "{20104,50301}": "Struttura di Connessione di Base Argon 03",
+  "{20104,50401}": "Struttura di Connessione di Base Paranid 01",
+  "{20104,50501}": "Struttura di Connessione di Base Paranid 02",
+  "{20104,50601}": "Struttura di Connessione di Base Paranid 03",
+  "{20104,50701}": "Struttura di Connessione di Base Teladi 01",
+  "{20104,50801}": "Struttura di Connessione di Base Teladi 02",
+  "{20104,50901}": "Struttura di Connessione di Base Teladi 03",
+  "{20104,51401}": "Struttura di Connessione a Croce Argon 01",
+  "{20104,51501}": "Struttura di Connessione a Croce Paranid 01",
+  "{20104,51601}": "Struttura di Connessione a Croce Paranid 02",
+  "{20104,51701}": "Struttura di Connessione a Y Paranid 01",
+  "{20104,51801}": "Struttura di Connessione a Croce Teladi 01",
+  "{20104,52101}": "Struttura di Connessione Verticale Argon 01",
+  "{20104,52201}": "Struttura di Connessione Verticale Argon 02",
+  "{20104,52301}": "Struttura di Connessione Verticale Paranid 01",
+  "{20104,52401}": "Struttura di Connessione Verticale Paranid 02",
+  "{20104,52501}": "Struttura di Connessione Verticale Teladi 01",
+  "{20104,52601}": "Struttura di Connessione Verticale Teladi 02",
+  "{20104,52901}": "Struttura di Connessione di Base per Avventure 01",
+  "{20104,53001}": "Struttura di Connessione di Base per Avventure 02",
+  "{20104,53101}": "Struttura di Connessione di Base per Avventure 03",
+  "{20104,53201}": "Struttura di Connessione a Croce per Avventure 01",
+  "{20104,53301}": "Struttura di Connessione Verticale per Avventure 01",
+  "{20104,53401}": "Struttura di Connessione Verticale per Avventure 02",
+  "{20104,55501}": "Struttura di Connessione ad Arco Argon 01",
+  "{20104,55601}": "Struttura di Connessione a Croce Argon 03",
+  "{20104,55701}": "Struttura di Connessione a Croce Argon 02",
+  "{20104,55901}": "Struttura di Connessione a L Argon 01",
+  "{20104,56101}": "Struttura di Connessione a T Argon 01",
   "{20104,60101}": "Baia di Costruzione Navi S",
   "{20104,60201}": "Baia di Costruzione Navi M",
   "{20104,60301}": "Baia di Costruzione Navi L",
@@ -164,27 +164,27 @@
   "{20104,61201}": "Matrice d'Assemblaggio XL",
   "{20104,61301}": "Baia di Costruzione Navi S/M",
   "{20104,61401}": "Baia di Manutenzione Navi S/M",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70001} {20111,5301} {20104,70003}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70001} {20111,5302} {20104,70003}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70001} {20111,5303} {20104,70003}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70001} {20111,5301} {20104,70004}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70001} {20111,5302} {20104,70004}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70001} {20111,5303} {20104,70004}",
-  "{20104,70801}": "(S/M Venture Sendoff Dock){20104,70701} {20111,5011}/{20111,5021}",
-  "{20104,70901}": "(L/XL Venture Sendoff Dock){20104,70701} {20111,5031}/{20111,5041}",
+  "{20104,70101}": "Area di Attracco Di Base 1M6S",
+  "{20104,70201}": "Area di Attracco Standard 1M6S",
+  "{20104,70301}": "Area di Attracco Di Lusso 1M6S",
+  "{20104,70401}": "Area di Attracco Di Base 3M6S",
+  "{20104,70501}": "Area di Attracco Standard 3M6S",
+  "{20104,70601}": "Area di Attracco Di Lusso 3M6S",
+  "{20104,70801}": "Attracco di Partenza Avventure S/M",
+  "{20104,70901}": "Attracco di Partenza Avventure L/XL",
   "{20104,71001}": "Attracco Xenon",
-  "{20104,71201}": "(Argon 1-Dock Pier){20104,71101} di {20104,71103} {20202,101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20104,71101} di {20104,71104} {20202,101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20104,71101} di {20104,71105} {20202,101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20104,71101} di {20104,71103} {20202,401}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20104,71101} di {20104,71104} {20202,401}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20104,71101} di {20104,71105} {20202,401}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20104,71101} di {20104,71103} {20202,501}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20104,71101} di {20104,71104} {20202,501}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20104,71101} di {20104,71105} {20202,501}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70001} {20111,5303} {20104,70005}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20104,71101} di {20104,71103} per {20102,1111}",
-  "{20104,74901}": "(Argon 1-Dock Short Pier){20202,101} {20104,71101} {20104,71109} ",
+  "{20104,71201}": "Molo di Attracco Singolo Argon",
+  "{20104,71301}": "Molo di Attracco Triplo a T Argon",
+  "{20104,71401}": "Molo di Attracco Triplo ad E Argon",
+  "{20104,71501}": "Molo di Attracco Singolo Paranid",
+  "{20104,71601}": "Molo di Attracco Triplo a T Paranid",
+  "{20104,71701}": "Molo di Attracco Triplo ad E Paranid",
+  "{20104,71801}": "Molo di Attracco Singolo Teladi",
+  "{20104,71901}": "Molo di Attracco Triplo a T Teladi",
+  "{20104,72001}": "Molo di Attracco Triplo ad E Teladi",
+  "{20104,73301}": "Area di Attracco Di Lusso 8M",
+  "{20104,73401}": "Molo di Attracco Singolo per Spazioporto Commerciale Argon",
+  "{20104,74901}": "Argon Molo Attracco Singolo Corto",
   "{20201,101}": "Elettronica Avanzata",
   "{20201,1101}": "Razioni Alimentari",
   "{20201,1201}": "Parti per Scafi",
