--- a/src/assets/game_data/Timelines (7.10)/locales/ko.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/ko.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "본부",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "고급 복합재 공장",
   "{20104,100101}": "거주지 링 확장물",
   "{20104,100201}": "거주지 링 기둥",
@@ -11,11 +11,11 @@
   "{20104,100801}": "센서 기기",
   "{20104,100901}": "유지보수 구역",
   "{20104,101001}": "환풍구",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20202,501} {20104,10001}",
+  "{20104,10101}": "텔라디 고급 복합재 공장",
   "{20104,101101}": "지지 구조물",
   "{20104,101201}": "명령 중계소",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "거주지 저장고 A",
+  "{20104,101306}": "거주지 저장고 B",
   "{20104,101401}": "거주지 링",
   "{20104,101601}": "미확인 모듈",
   "{20104,101801}": "제논 기지 모듈",
@@ -33,15 +33,15 @@
   "{20104,10701}": "드론 부품 공장",
   "{20104,10801}": "에너지 셀 공장",
   "{20104,10901}": "엔진 부품 공장",
-  "{20104,11001}": "(Teladi Engine Part Production){20202,501} {20104,10901}",
+  "{20104,11001}": "텔라디 엔진 부품 공장",
   "{20104,110201}": "갬블링 덴",
   "{20104,11101}": "계자 코일 공장",
   "{20104,11201}": "그래핀 공장",
   "{20104,11301}": "선체 부품 공장",
-  "{20104,11401}": "(Teladi Hull Part Production){20202,501} {20104,11301}",
-  "{20104,11601}": "(Argon Medical Supply Production){20202,101} {20104,11501}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20202,401} {20104,11501}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20202,501} {20104,11501}",
+  "{20104,11401}": "텔라디 선체 부품 공장",
+  "{20104,11601}": "아르곤 의약품 공장",
+  "{20104,11701}": "파라니드 의약품 공장",
+  "{20104,11801}": "텔라디 의약품 공장",
   "{20104,11901}": "마이크로칩 공장",
   "{20104,12001}": "미사일 부품 공장",
   "{20104,120101}": "폐품 처리기",
@@ -49,7 +49,7 @@
   "{20104,12201}": "양자 튜브 공장",
   "{20104,12301}": "정제 금속 공장",
   "{20104,12401}": "스캐닝 기기 공장",
-  "{20104,12501}": "(Teladi Scanning Array Production){20202,501} {20104,12401}",
+  "{20104,12501}": "텔라디 스캐닝 기기 공장",
   "{20104,12601}": "보호막 부품 공장",
   "{20104,12701}": "실리콘 웨이퍼 공장",
   "{20104,12801}": "스마트 칩 공장",
@@ -74,117 +74,117 @@
   "{20104,14601}": "텔라디아니움 공장",
   "{20104,14701}": "태양 전지판",
   "{20104,150101}": "광역 센서 기기",
-  "{20104,20101}": "(Argon S Container Storage){20202,101} {20111,5011} {20104,20001}",
-  "{20104,20201}": "(Argon M Container Storage){20202,101} {20111,5021} {20104,20001}",
-  "{20104,20301}": "(Argon L Container Storage){20202,101} {20111,5031} {20104,20001}",
-  "{20104,20401}": "(Paranid S Container Storage){20202,401} {20111,5011} {20104,20001}",
-  "{20104,20501}": "(Paranid M Container Storage){20202,401} {20111,5021} {20104,20001}",
-  "{20104,20601}": "(Paranid L Container Storage){20202,401} {20111,5031} {20104,20001}",
-  "{20104,20701}": "(Teladi S Container Storage){20202,501} {20111,5011} {20104,20001}",
-  "{20104,20801}": "(Teladi M Container Storage){20202,501} {20111,5021} {20104,20001}",
-  "{20104,20901}": "(Teladi L Container Storage){20202,501} {20111,5031} {20104,20001}",
-  "{20104,21101}": "(Argon S Liquid Storage){20202,101} {20111,5011} {20104,21001}",
-  "{20104,21201}": "(Argon M Liquid Storage){20202,101} {20111,5021} {20104,21001}",
-  "{20104,21301}": "(Argon L Liquid Storage){20202,101} {20111,5031} {20104,21001}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20202,401} {20111,5011} {20104,21001}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20202,401} {20111,5021} {20104,21001}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20202,401} {20111,5031} {20104,21001}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20202,501} {20111,5011} {20104,21001}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20202,501} {20111,5021} {20104,21001}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20202,501} {20111,5031} {20104,21001}",
-  "{20104,22101}": "(Argon S Solid Storage){20202,101} {20111,5011} {20104,22001}",
-  "{20104,22201}": "(Argon M Solid Storage){20202,101} {20111,5021} {20104,22001}",
-  "{20104,22301}": "(Argon L Solid Storage){20202,101} {20111,5031} {20104,22001}",
-  "{20104,22401}": "(Paranid S Solid Storage){20202,401} {20111,5011} {20104,22001}",
-  "{20104,22501}": "(Paranid M Solid Storage){20202,401} {20111,5021} {20104,22001}",
-  "{20104,22601}": "(Paranid L Solid Storage){20202,401} {20111,5031} {20104,22001}",
-  "{20104,22701}": "(Teladi S Solid Storage){20202,501} {20111,5011} {20104,22001}",
-  "{20104,22801}": "(Teladi M Solid Storage){20202,501} {20111,5021} {20104,22001}",
-  "{20104,22901}": "(Teladi L Solid Storage){20202,501} {20111,5031} {20104,22001}",
-  "{20104,23301}": "(Argon L Universal Storage){20202,101} {20111,5031} {20104,23001}",
+  "{20104,20101}": "아르곤 S 컨테이너 저장소",
+  "{20104,20201}": "아르곤 M 컨테이너 저장소",
+  "{20104,20301}": "아르곤 L 컨테이너 저장소",
+  "{20104,20401}": "파라니드 S 컨테이너 저장소",
+  "{20104,20501}": "파라니드 M 컨테이너 저장소",
+  "{20104,20601}": "파라니드 L 컨테이너 저장소",
+  "{20104,20701}": "텔라디 S 컨테이너 저장소",
+  "{20104,20801}": "텔라디 M 컨테이너 저장소",
+  "{20104,20901}": "텔라디 L 컨테이너 저장소",
+  "{20104,21101}": "아르곤 S 액화가스 저장소",
+  "{20104,21201}": "아르곤 M 액화가스 저장소",
+  "{20104,21301}": "아르곤 L 액화가스 저장소",
+  "{20104,21401}": "파라니드 S 액화가스 저장소",
+  "{20104,21501}": "파라니드 M 액화가스 저장소",
+  "{20104,21601}": "파라니드 L 액화가스 저장소",
+  "{20104,21701}": "텔라디 S 액화가스 저장소",
+  "{20104,21801}": "텔라디 M 액화가스 저장소",
+  "{20104,21901}": "텔라디 L 액화가스 저장소",
+  "{20104,22101}": "아르곤 S 광물 저장소",
+  "{20104,22201}": "아르곤 M 광물 저장소",
+  "{20104,22301}": "아르곤 L 광물 저장소",
+  "{20104,22401}": "파라니드 S 광물 저장소",
+  "{20104,22501}": "파라니드 M 광물 저장소",
+  "{20104,22601}": "파라니드 L 광물 저장소",
+  "{20104,22701}": "텔라디 S 광물 저장소",
+  "{20104,22801}": "텔라디 M 광물 저장소",
+  "{20104,22901}": "텔라디 L 광물 저장소",
+  "{20104,23301}": "아르곤 L 다용도 저장소",
   "{20104,24001}": "다열 저장고",
-  "{20104,30101}": "(Argon S Habitat){20202,101} {20111,5011} {20104,30103}",
-  "{20104,30201}": "(Argon M Habitat){20202,101} {20111,5021} {20104,30203}",
-  "{20104,30301}": "(Argon L Habitat){20202,101} {20111,5031} {20104,30303}",
-  "{20104,30401}": "(Paranid S Dome){20202,401} {20111,5011} {20104,30403}",
-  "{20104,30501}": "(Paranid M Dome){20202,401} {20111,5021} {20104,30503}",
-  "{20104,30601}": "(Paranid L Dome){20202,401} {20111,5031} {20104,30603}",
-  "{20104,30701}": "(Teladi S Biome){20202,501} {20111,5011} {20104,30703}",
-  "{20104,30801}": "(Teladi M Biome){20202,501} {20111,5021} {20104,30803}",
-  "{20104,30901}": "(Teladi L Biome){20202,501} {20111,5031} {20104,30903}",
-  "{20104,40101}": "(Argon Administrative Centre){20202,101} {20104,40001}",
-  "{20104,40201}": "(Paranid Administrative Centre){20202,401} {20104,40001}",
-  "{20104,40301}": "(Teladi Administrative Centre){20202,501} {20104,40001}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20202,101} {20104,40501}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20202,401} {20104,40501}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20202,501} {20104,40501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20202,101} {20104,41001}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20202,401} {20104,41001}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20202,501} {20104,41001}",
-  "{20104,41601}": "(Paranid Faction Capital){20202,401} {20104,41501}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20202,101} {20104,50001} {20111,5101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20202,101} {20104,50001} {20111,5102}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20202,101} {20104,50001} {20111,5103}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20202,401} {20104,50001} {20111,5101}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20202,401} {20104,50001} {20111,5102}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20202,401} {20104,50001} {20111,5103}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20202,501} {20104,50001} {20111,5101}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20202,501} {20104,50001} {20111,5102}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20202,501} {20104,50001} {20111,5103}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20202,101} {20104,51301} {20111,5101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20202,401} {20104,51301} {20111,5101}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20202,401} {20104,51301} {20111,5102}",
-  "{20104,51701}": "(Paranid Y Connection Structure 01){20202,401} {20104,56201} {20111,5101}",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20202,501} {20104,51301} {20111,5101}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20202,101} {20104,52001} {20111,5101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20202,101} {20104,52001} {20111,5102}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20202,401} {20104,52001} {20111,5101}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20202,401} {20104,52001} {20111,5102}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20202,501} {20104,52001} {20111,5101}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20202,501} {20104,52001} {20111,5102}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20111,6001} {20104,50001} {20111,5101}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20111,6001} {20104,50001} {20111,5102}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20111,6001} {20104,50001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20111,6001} {20104,51301} {20111,5101}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20111,6001} {20104,52001} {20111,5101}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20111,6001} {20104,52001} {20111,5102}",
-  "{20104,55501}": "(Argon Arc Connection Structure 01){20202,101} {20104,55001} {20111,5101}",
-  "{20104,55601}": "(Argon Cross Connection Structure 03){20202,101} {20104,51301} {20111,5103}",
-  "{20104,55701}": "(Argon Cross Connection Structure 02){20202,101} {20104,51301} {20111,5102}",
-  "{20104,55901}": "(Argon L Connection Structure 01){20202,101} {20104,55801} {20111,5101}",
-  "{20104,56101}": "(Argon T Connection Structure 01){20202,101} {20104,56001} {20111,5101}",
+  "{20104,30101}": "아르곤 S 거주지",
+  "{20104,30201}": "아르곤 M 거주지",
+  "{20104,30301}": "아르곤 L 거주지",
+  "{20104,30401}": "파라니드 S 거주지",
+  "{20104,30501}": "파라니드 M 거주지",
+  "{20104,30601}": "파라니드 L 거주지",
+  "{20104,30701}": "텔라디 S 거주지",
+  "{20104,30801}": "텔라디 M 거주지",
+  "{20104,30901}": "텔라디 L 거주지",
+  "{20104,40101}": "아르곤 행정 센터",
+  "{20104,40201}": "파라니드 행정 센터",
+  "{20104,40301}": "텔라디 행정 센터",
+  "{20104,40601}": "아르곤 원반형 방어 플랫폼",
+  "{20104,40701}": "파라니드 원반형 방어 플랫폼",
+  "{20104,40801}": "텔라디 원반형 방어 플랫폼",
+  "{20104,41101}": "아르곤 교각형 방어 플랫폼",
+  "{20104,41201}": "파라니드 교각형 방어 플랫폼",
+  "{20104,41301}": "텔라디 교각형 방어 플랫폼",
+  "{20104,41601}": "파라니드 세력 수도",
+  "{20104,50101}": "아르곤 기본 연결 구조물 01",
+  "{20104,50201}": "아르곤 기본 연결 구조물 02",
+  "{20104,50301}": "아르곤 기본 연결 구조물 03",
+  "{20104,50401}": "파라니드 기본 연결 구조물 01",
+  "{20104,50501}": "파라니드 기본 연결 구조물 02",
+  "{20104,50601}": "파라니드 기본 연결 구조물 03",
+  "{20104,50701}": "텔라디 기본 연결 구조물 01",
+  "{20104,50801}": "텔라디 기본 연결 구조물 02",
+  "{20104,50901}": "텔라디 기본 연결 구조물 03",
+  "{20104,51401}": "아르곤 교차 연결 구조물 01",
+  "{20104,51501}": "파라니드 교차 연결 구조물 01",
+  "{20104,51601}": "파라니드 교차 연결 구조물 02",
+  "{20104,51701}": "파라니드 Y 연결 구조물 01",
+  "{20104,51801}": "텔라디 교차 연결 구조물 01",
+  "{20104,52101}": "아르곤 수직 연결 구조물 01",
+  "{20104,52201}": "아르곤 수직 연결 구조물 02",
+  "{20104,52301}": "파라니드 수직 연결 구조물 01",
+  "{20104,52401}": "파라니드 수직 연결 구조물 02",
+  "{20104,52501}": "텔라디 수직 연결 구조물 01",
+  "{20104,52601}": "텔라디 수직 연결 구조물 02",
+  "{20104,52901}": "탐험 기본 연결 구조물 01",
+  "{20104,53001}": "탐험 기본 연결 구조물 02",
+  "{20104,53101}": "탐험 기본 연결 구조물 03",
+  "{20104,53201}": "탐험 교차 연결 구조물 01",
+  "{20104,53301}": "탐험 수직 연결 구조물 01",
+  "{20104,53401}": "탐험 수직 연결 구조물 02",
+  "{20104,55501}": "아르곤 아치형 연결 구조 01",
+  "{20104,55601}": "아르곤 교차 연결 구조물 03",
+  "{20104,55701}": "아르곤 교차 연결 구조물 02",
+  "{20104,55901}": "아르곤 L 연결 구조물 01",
+  "{20104,56101}": "아르곤 T 연결 구조물 01",
   "{20104,60101}": "S급 함선 제조소",
   "{20104,60201}": "M급 함선 제조소",
   "{20104,60301}": "L급 함선 제조소",
   "{20104,60401}": "XL급 함선 제조소",
   "{20104,60601}": "L급 함선 정비소",
   "{20104,60701}": "XL급 함선 정비소",
-  "{20104,61001}": "S급 함선 조립 매트릭스(제논 전용)",
-  "{20104,61101}": "M급 함선 조립 매트릭스(제논 전용)",
-  "{20104,61201}": "XL급 함선 조립 매트릭스(제논 전용)",
+  "{20104,61001}": "S급 함선 조립 매트릭스",
+  "{20104,61101}": "M급 함선 조립 매트릭스",
+  "{20104,61201}": "XL급 함선 조립 매트릭스",
   "{20104,61301}": "S/M급 함선 제조소",
   "{20104,61401}": "S/M급 함선 정비소",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70003} {20111,5301} {20104,70001}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70003} {20111,5302} {20104,70001}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70003} {20111,5303} {20104,70001}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70004} {20111,5301} {20104,70001}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70004} {20111,5302} {20104,70001}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70004} {20111,5303} {20104,70001}",
-  "{20104,70801}": "(S/M Venture Sendoff Dock){20111,5011}/{20111,5021} {20104,70701}",
-  "{20104,70901}": "(L/XL Venture Sendoff Dock){20111,5031}/{20111,5041} {20104,70701}",
+  "{20104,70101}": "1M6S 기본형 도크 구역",
+  "{20104,70201}": "1M6S 표준형 도크 구역",
+  "{20104,70301}": "1M6S 고급형 도크 구역",
+  "{20104,70401}": "3M6S 기본형 도크 구역",
+  "{20104,70501}": "3M6S 표준형 도크 구역",
+  "{20104,70601}": "3M6S 고급형 도크 구역",
+  "{20104,70801}": "S/M 탐험 출항 도크",
+  "{20104,70901}": "L/XL 탐험 출항 도크",
   "{20104,71001}": "제논 도크",
-  "{20104,71201}": "(Argon 1-Dock Pier){20202,101} {20104,71103} {20104,71101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20202,101} {20104,71104} {20104,71101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20202,101} {20104,71105} {20104,71101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20202,401} {20104,71103} {20104,71101}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20202,401} {20104,71104} {20104,71101}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20202,401} {20104,71105} {20104,71101}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20202,501} {20104,71103} {20104,71101}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20202,501} {20104,71104} {20104,71101}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20202,501} {20104,71105} {20104,71101}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70005} {20111,5303} {20104,70001}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20102,1111} {20104,71103} {20104,71101}",
-  "{20104,74901}": "(Argon 1-Dock Short Pier){20202,101} {20104,71109} {20104,71101}",
+  "{20104,71201}": "아르곤 1-도크 부두",
+  "{20104,71301}": "아르곤 3-도크 T 부두",
+  "{20104,71401}": "아르곤 3-도크 E 부두",
+  "{20104,71501}": "파라니드 1-도크 부두",
+  "{20104,71601}": "파라니드 3-도크 T 부두",
+  "{20104,71701}": "파라니드 3-도크 E 부두",
+  "{20104,71801}": "텔라디 1-도크 부두",
+  "{20104,71901}": "텔라디 3-도크 T 부두",
+  "{20104,72001}": "텔라디 3-도크 E 부두",
+  "{20104,73301}": "8M 고급형 도크 구역",
+  "{20104,73401}": "아르곤 무역 스테이션 1-도크 부두",
+  "{20104,74901}": "아르곤 1-도크 단선 부두",
   "{20201,101}": "고급 전자부품",
   "{20201,1101}": "배급식량",
   "{20201,1201}": "선체 부품",
