--- a/src/assets/game_data/Timelines (7.10)/locales/ru.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/ru.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "Штаб-квартира",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "Производство суперкомпозитов",
   "{20104,100101}": "Кольцо расширения Ареал",
   "{20104,100201}": "Опора кольца Ареал",
@@ -11,11 +11,11 @@
   "{20104,100801}": "Сенсорный блок",
   "{20104,100901}": "Зона обслуживания",
   "{20104,101001}": "Вентиляция",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20202,501} {20104,10001}",
+  "{20104,10101}": "Телади Производство суперкомпозитов",
   "{20104,101101}": "Опорная конструкция",
   "{20104,101201}": "Ретранслятор команд",
-  "{20104,101305}": "(Хранилище Ареал A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Хранилище Ареал B){20104,101301} {20403,2}",
+  "{20104,101305}": "Хранилище Ареал A",
+  "{20104,101306}": "Хранилище Ареал B",
   "{20104,101401}": "Кольцо Ареал",
   "{20104,101601}": "Неизвестный модуль",
   "{20104,101801}": "Ксенонский базовый модуль",
@@ -25,23 +25,23 @@
   "{20104,102101}": "Скоба кольца Ареал",
   "{20104,102201}": "Сервисная секция Ареал",
   "{20104,10301}": "Производство АМ-элементов",
-  "{20104,103601}": "Смотровая палуба - пентхаус(на вершине/внизу станции)",
-  "{20104,103701}": "Смотровая палуба - оранжерея(на боку станции, горизонтальная)",
-  "{20104,103801}": "Смотровая палуба - павильон (на боку станции, вертикальный)",
+  "{20104,103601}": "Смотровая палуба - пентхаус",
+  "{20104,103701}": "Смотровая палуба - оранжерея",
+  "{20104,103801}": "Смотровая палуба - павильон",
   "{20104,10401}": "Производство АМ-конвертеров",
   "{20104,10501}": "Производство клэйтроники",
   "{20104,10701}": "Производство компонентов дронов",
   "{20104,10801}": "Производство энергоэлементов",
   "{20104,10901}": "Производство деталей двигателей",
-  "{20104,11001}": "(Teladi Engine Part Production){20202,501} {20104,10901}",
+  "{20104,11001}": "Телади Производство деталей двигателей",
   "{20104,110201}": "Игорный Притон",
   "{20104,11101}": "Производство полевых катушек",
   "{20104,11201}": "Производство графена",
   "{20104,11301}": "Производство деталей корпуса",
-  "{20104,11401}": "(Teladi Hull Part Production){20202,501} {20104,11301}",
-  "{20104,11601}": "(Argon Medical Supply Production){20202,101} {20104,11501}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20202,401} {20104,11501}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20202,501} {20104,11501}",
+  "{20104,11401}": "Телади Производство деталей корпуса",
+  "{20104,11601}": "Аргон Производство медикаментов",
+  "{20104,11701}": "Паранид Производство медикаментов",
+  "{20104,11801}": "Телади Производство медикаментов",
   "{20104,11901}": "Производство микросхем",
   "{20104,12001}": "Производство компонентов ракет",
   "{20104,120101}": "Обработчик Металлолома",
@@ -49,7 +49,7 @@
   "{20104,12201}": "Производство квантовых трубок",
   "{20104,12301}": "Производство очищенных металлов",
   "{20104,12401}": "Производство сканирующих матриц",
-  "{20104,12501}": "(Teladi Scanning Array Production){20202,501} {20104,12401}",
+  "{20104,12501}": "Телади Производство сканирующих матриц",
   "{20104,12601}": "Производство компонентов щитов",
   "{20104,12701}": "Производство кремниевых пластин",
   "{20104,12801}": "Производство смарт-чипов",
@@ -74,89 +74,89 @@
   "{20104,14601}": "Производство теладиания",
   "{20104,14701}": "Матричная солнечная панель",
   "{20104,150101}": "Массив датчиков широкого диапазона",
-  "{20104,20101}": "(Argon S Container Storage){20202,101} {20111,5011} {20104,20001}",
-  "{20104,20201}": "(Argon M Container Storage){20202,101} {20111,5021} {20104,20001}",
-  "{20104,20301}": "(Argon L Container Storage){20202,101} {20111,5031} {20104,20001}",
-  "{20104,20401}": "(Paranid S Container Storage){20202,401} {20111,5011} {20104,20001}",
-  "{20104,20501}": "(Paranid M Container Storage){20202,401} {20111,5021} {20104,20001}",
-  "{20104,20601}": "(Paranid L Container Storage){20202,401} {20111,5031} {20104,20001}",
-  "{20104,20701}": "(Teladi S Container Storage){20202,501} {20111,5011} {20104,20001}",
-  "{20104,20801}": "(Teladi M Container Storage){20202,501} {20111,5021} {20104,20001}",
-  "{20104,20901}": "(Teladi L Container Storage){20202,501} {20111,5031} {20104,20001}",
-  "{20104,21101}": "(Argon S Liquid Storage){20202,101} {20111,5011} {20104,21001}",
-  "{20104,21201}": "(Argon M Liquid Storage){20202,101} {20111,5021} {20104,21001}",
-  "{20104,21301}": "(Argon L Liquid Storage){20202,101} {20111,5031} {20104,21001}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20202,401} {20111,5011} {20104,21001}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20202,401} {20111,5021} {20104,21001}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20202,401} {20111,5031} {20104,21001}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20202,501} {20111,5011} {20104,21001}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20202,501} {20111,5021} {20104,21001}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20202,501} {20111,5031} {20104,21001}",
-  "{20104,22101}": "(Argon S Solid Storage){20202,101} {20111,5011} {20104,22001}",
-  "{20104,22201}": "(Argon M Solid Storage){20202,101} {20111,5021} {20104,22001}",
-  "{20104,22301}": "(Argon L Solid Storage){20202,101} {20111,5031} {20104,22001}",
-  "{20104,22401}": "(Paranid S Solid Storage){20202,401} {20111,5011} {20104,22001}",
-  "{20104,22501}": "(Paranid M Solid Storage){20202,401} {20111,5021} {20104,22001}",
-  "{20104,22601}": "(Paranid L Solid Storage){20202,401} {20111,5031} {20104,22001}",
-  "{20104,22701}": "(Teladi S Solid Storage){20202,501} {20111,5011} {20104,22001}",
-  "{20104,22801}": "(Teladi M Solid Storage){20202,501} {20111,5021} {20104,22001}",
-  "{20104,22901}": "(Teladi L Solid Storage){20202,501} {20111,5031} {20104,22001}",
-  "{20104,23301}": "(Argon L Universal Storage){20202,101} {20111,5031} {20104,23001}",
+  "{20104,20101}": "Аргон S Хранилище контейнеров",
+  "{20104,20201}": "Аргон M Хранилище контейнеров",
+  "{20104,20301}": "Аргон L Хранилище контейнеров",
+  "{20104,20401}": "Паранид S Хранилище контейнеров",
+  "{20104,20501}": "Паранид M Хранилище контейнеров",
+  "{20104,20601}": "Паранид L Хранилище контейнеров",
+  "{20104,20701}": "Телади S Хранилище контейнеров",
+  "{20104,20801}": "Телади M Хранилище контейнеров",
+  "{20104,20901}": "Телади L Хранилище контейнеров",
+  "{20104,21101}": "Аргон S Хранилище жидкостей",
+  "{20104,21201}": "Аргон M Хранилище жидкостей",
+  "{20104,21301}": "Аргон L Хранилище жидкостей",
+  "{20104,21401}": "Паранид S Хранилище жидкостей",
+  "{20104,21501}": "Паранид M Хранилище жидкостей",
+  "{20104,21601}": "Паранид L Хранилище жидкостей",
+  "{20104,21701}": "Телади S Хранилище жидкостей",
+  "{20104,21801}": "Телади M Хранилище жидкостей",
+  "{20104,21901}": "Телади L Хранилище жидкостей",
+  "{20104,22101}": "Аргон S Хранилище твердых грузов",
+  "{20104,22201}": "Аргон M Хранилище твердых грузов",
+  "{20104,22301}": "Аргон L Хранилище твердых грузов",
+  "{20104,22401}": "Паранид S Хранилище твердых грузов",
+  "{20104,22501}": "Паранид M Хранилище твердых грузов",
+  "{20104,22601}": "Паранид L Хранилище твердых грузов",
+  "{20104,22701}": "Телади S Хранилище твердых грузов",
+  "{20104,22801}": "Телади M Хранилище твердых грузов",
+  "{20104,22901}": "Телади L Хранилище твердых грузов",
+  "{20104,23301}": "Аргон L Универсальное хранилище",
   "{20104,24001}": "Матричное хранилище",
-  "{20104,30101}": "(Argon S Habitat){20202,101} {20111,5011} {20104,30103}",
-  "{20104,30201}": "(Argon M Habitat){20202,101} {20111,5021} {20104,30203}",
-  "{20104,30301}": "(Argon L Habitat){20202,101} {20111,5031} {20104,30303}",
-  "{20104,30401}": "(Paranid S Dome){20202,401} {20111,5011} {20104,30403}",
-  "{20104,30501}": "(Paranid M Dome){20202,401} {20111,5021} {20104,30503}",
-  "{20104,30601}": "(Paranid L Dome){20202,401} {20111,5031} {20104,30603}",
-  "{20104,30701}": "(Teladi S Biome){20202,501} {20111,5011} {20104,30703}",
-  "{20104,30801}": "(Teladi M Biome){20202,501} {20111,5021} {20104,30803}",
-  "{20104,30901}": "(Teladi L Biome){20202,501} {20111,5031} {20104,30903}",
-  "{20104,40101}": "(Argon Administrative Centre){20202,101} {20104,40001}",
-  "{20104,40201}": "(Paranid Administrative Centre){20202,401} {20104,40001}",
-  "{20104,40301}": "(Teladi Administrative Centre){20202,501} {20104,40001}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20202,101} {20104,40501}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20202,401} {20104,40501}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20202,501} {20104,40501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20202,101} {20104,41001}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20202,401} {20104,41001}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20202,501} {20104,41001}",
-  "{20104,41601}": "(Paranid Faction Capital){20202,401} {20104,41501}",
-  "{20104,50101}": "(Аргон базовая Соединительная конструкция 01){20202,101} {20104,50001} {20111,5101}",
-  "{20104,50201}": "(Аргон базовая Соединительная конструкция 02){20202,101} {20104,50001} {20111,5102}",
-  "{20104,50301}": "(Аргон базовая Соединительная конструкция 03){20202,101} {20104,50001} {20111,5103}",
-  "{20104,50401}": "(Паранид базовая Соединительная конструкция 01){20202,401} {20104,50001} {20111,5101}",
-  "{20104,50501}": "(Паранид базовая Соединительная конструкция 02){20202,401} {20104,50001} {20111,5102}",
-  "{20104,50601}": "(Паранид базовая Соединительная конструкция 03){20202,401} {20104,50001} {20111,5103}",
-  "{20104,50701}": "(Телади базовая Соединительная конструкция 01){20202,501} {20104,50001} {20111,5101}",
-  "{20104,50801}": "(Телади базовая Соединительная конструкция 02){20202,501} {20104,50001} {20111,5102}",
-  "{20104,50901}": "(Телади базовая Соединительная конструкция 03){20202,501} {20104,50001} {20111,5103}",
-  "{20104,51401}": "(Аргон крестовая Соединительная конструкция 01){20202,101} {20104,51301} {20111,5101}",
-  "{20104,51501}": "(Паранид крестовая Соединительная конструкция 01){20202,401} {20104,51301} {20111,5101}",
-  "{20104,51601}": "(Паранид крестовая Соединительная конструкция 02){20202,401} {20104,51301} {20111,5102}",
-  "{20104,51701}": "(Паранид Соединительная конструкция Y 01){20202,401} {20104,56201} {20111,5101}",
-  "{20104,51801}": "(Телади крестовая Соединительная конструкция 01){20202,501} {20104,51301} {20111,5101}",
-  "{20104,52101}": "(Аргон вертикальная Соединительная конструкция 01){20202,101} {20104,52001} {20111,5101}",
-  "{20104,52201}": "(Аргон вертикальная Соединительная конструкция 02){20202,101} {20104,52001} {20111,5102}",
-  "{20104,52301}": "(Паранид вертикальная Соединительная конструкция 01){20202,401} {20104,52001} {20111,5101}",
-  "{20104,52401}": "(Паранид вертикальная Соединительная конструкция 02){20202,401} {20104,52001} {20111,5102}",
-  "{20104,52501}": "(Телади вертикальная Соединительная конструкция 01){20202,501} {20104,52001} {20111,5101}",
-  "{20104,52601}": "(Телади вертикальная Соединительная конструкция 02){20202,501} {20104,52001} {20111,5102}",
-  "{20104,52901}": "(Венчур базовая Соедиительная конструкция 01){20111,6001} {20104,50001} {20111,5101}",
-  "{20104,53001}": "(Венчур базовая Соедиительная конструкция 02){20111,6001} {20104,50001} {20111,5102}",
-  "{20104,53101}": "(Венчур базовая Соедиительная конструкция 03){20111,6001} {20104,50001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20111,6001} {20104,51301} {20111,5101}",
-  "{20104,53301}": "(Венчур вертикальная Соедиительная конструкция 01){20111,6001} {20104,52001} {20111,5101}",
-  "{20104,53401}": "(Венчур вертикальная Соедиительная конструкция 02){20111,6001} {20104,52001} {20111,5102}",
-  "{20104,55501}": "(Аргон Соединительная арочная конструкция 01){20202,101} {20104,55001} {20111,5101}",
-  "{20104,55601}": "(Аргон Соединительная арочная конструкция 03){20202,101} {20104,51301} {20111,5103}",
-  "{20104,55701}": "(Аргон Соединительная крестовая конструкция 02){20202,101} {20104,51301} {20111,5102}",
-  "{20104,55901}": "(Аргон Соединительная конструкция L 01){20202,101} {20104,55801} {20111,5101}",
-  "{20104,56101}": "(Аргон Соединительная конструкция T 01){20202,101} {20104,56001} {20111,5101}",
-  "{20104,60101}": "Производственный отсек S-кораблей(S Ship Fabrication Bay)",
-  "{20104,60201}": "Производственный отсек M-кораблей(M Ship Fabrication Bay)",
-  "{20104,60301}": "Производственный отсек L-кораблей(L Ship Fabrication Bay)",
-  "{20104,60401}": "Производственный отсек XL-кораблей(XL Ship Fabrication Bay)",
+  "{20104,30101}": "Аргон S Ареал",
+  "{20104,30201}": "Аргон M Ареал",
+  "{20104,30301}": "Аргон L Ареал",
+  "{20104,30401}": "Паранид S Купол",
+  "{20104,30501}": "Паранид M Купол",
+  "{20104,30601}": "Паранид L Купол",
+  "{20104,30701}": "Телади S Биом",
+  "{20104,30801}": "Телади M Биом",
+  "{20104,30901}": "Телади L Биом",
+  "{20104,40101}": "Аргон Административный центр",
+  "{20104,40201}": "Паранид Административный центр",
+  "{20104,40301}": "Телади Административный центр",
+  "{20104,40601}": "Аргон Дисковая защитная платформа",
+  "{20104,40701}": "Паранид Дисковая защитная платформа",
+  "{20104,40801}": "Телади Дисковая защитная платформа",
+  "{20104,41101}": "Аргон Мостовая защитная платформа",
+  "{20104,41201}": "Паранид Мостовая защитная платформа",
+  "{20104,41301}": "Телади Мостовая защитная платформа",
+  "{20104,41601}": "Паранид Столица фракции",
+  "{20104,50101}": "Аргон Базовая соединительная конструкция 01",
+  "{20104,50201}": "Аргон Базовая соединительная конструкция 02",
+  "{20104,50301}": "Аргон Базовая соединительная конструкция 03",
+  "{20104,50401}": "Паранид Базовая соединительная конструкция 01",
+  "{20104,50501}": "Паранид Базовая соединительная конструкция 02",
+  "{20104,50601}": "Паранид Базовая соединительная конструкция 03",
+  "{20104,50701}": "Телади Базовая соединительная конструкция 01",
+  "{20104,50801}": "Телади Базовая соединительная конструкция 02",
+  "{20104,50901}": "Телади Базовая соединительная конструкция 03",
+  "{20104,51401}": "Аргон Крестовая соединительная конструкция 01",
+  "{20104,51501}": "Паранид Крестовая соединительная конструкция 01",
+  "{20104,51601}": "Паранид Крестовая соединительная конструкция 02",
+  "{20104,51701}": "Паранид Соединительная конструкция Y 01",
+  "{20104,51801}": "Телади Крестовая соединительная конструкция 01",
+  "{20104,52101}": "Аргон Вертикальная соединительная конструкция 01",
+  "{20104,52201}": "Аргон Вертикальная соединительная конструкция 02",
+  "{20104,52301}": "Паранид Вертикальная соединительная конструкция 01",
+  "{20104,52401}": "Паранид Вертикальная соединительная конструкция 02",
+  "{20104,52501}": "Телади Вертикальная соединительная конструкция 01",
+  "{20104,52601}": "Телади Вертикальная соединительная конструкция 02",
+  "{20104,52901}": "Венчурный Базовая соединительная конструкция 01",
+  "{20104,53001}": "Венчурный Базовая соединительная конструкция 02",
+  "{20104,53101}": "Венчурный Базовая соединительная конструкция 03",
+  "{20104,53201}": "Венчурный Крестовая соединительная конструкция 01",
+  "{20104,53301}": "Венчурный Вертикальная соединительная конструкция 01",
+  "{20104,53401}": "Венчурный Вертикальная соединительная конструкция 02",
+  "{20104,55501}": "Аргон Арочная соединительная конструкция 01",
+  "{20104,55601}": "Аргон Крестовая соединительная конструкция 03",
+  "{20104,55701}": "Аргон Крестовая соединительная конструкция 02",
+  "{20104,55901}": "Аргон Соединительная конструкция L 01",
+  "{20104,56101}": "Аргон Соединительная конструкция T 01",
+  "{20104,60101}": "Производственный отсек S-кораблей",
+  "{20104,60201}": "Производственный отсек M-кораблей",
+  "{20104,60301}": "Производственный отсек L-кораблей",
+  "{20104,60401}": "Производственный отсек XL-кораблей",
   "{20104,60601}": "Отсек обслуживания L-кораблей",
   "{20104,60701}": "Отсек обслуживания XL-кораблей",
   "{20104,61001}": "Сборочная матрица S-кораблей",
@@ -164,27 +164,27 @@
   "{20104,61201}": "Сборочная матрица XL-кораблей",
   "{20104,61301}": "Производственный отсек S/M-кораблей",
   "{20104,61401}": "Отсек обслуживания S/M-кораблей",
-  "{20104,70101}": "(1M6S Базовый Посадочная площадка){20104,70003} {20111,5301} {20104,70001}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70003} {20111,5302} {20104,70001}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70003} {20111,5303} {20104,70001}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70004} {20111,5301} {20104,70001}",
-  "{20104,70501}": "(3M6S Стандарт Посадочная площадка){20104,70004} {20111,5302} {20104,70001}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70004} {20111,5303} {20104,70001}",
-  "{20104,70801}": "(S/M Venture Sendoff Dock){20111,5011}/{20111,5021} {20104,70701}",
-  "{20104,70901}": "(L/XL Venture Sendoff Dock){20111,5031}/{20111,5041} {20104,70701}",
+  "{20104,70101}": "1M6S Базовый Посадочная площадка",
+  "{20104,70201}": "1M6S Стандартный Посадочная площадка",
+  "{20104,70301}": "1M6S Люксовый Посадочная площадка",
+  "{20104,70401}": "3M6S Базовый Посадочная площадка",
+  "{20104,70501}": "3M6S Стандартный Посадочная площадка",
+  "{20104,70601}": "3M6S Люксовый Посадочная площадка",
+  "{20104,70801}": "S/M Венчурный отправной док",
+  "{20104,70901}": "L/XL Венчурный отправной док",
   "{20104,71001}": "Ксенонский док",
-  "{20104,71201}": "(Argon 1-Dock Pier){20202,101} {20104,71103} {20104,71101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20202,101} {20104,71104} {20104,71101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20202,101} {20104,71105} {20104,71101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20202,401} {20104,71103} {20104,71101}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20202,401} {20104,71104} {20104,71101}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20202,401} {20104,71105} {20104,71101}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20202,501} {20104,71103} {20104,71101}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20202,501} {20104,71104} {20104,71101}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20202,501} {20104,71105} {20104,71101}",
-  "{20104,73301}": "(8M Люкс Посадочная площадка){20104,70005} {20111,5303} {20104,70001}",
-  "{20104,73401}": "(Арг. Торговая станция 1-Док Причал){20102,1111} {20104,71103} {20104,71101}",
-  "{20104,74901}": "(Аргон Короткий Док-1 Пирс){20202,101} {20104,71109} {20104,71101}",
+  "{20104,71201}": "Аргон 1-Док Причал",
+  "{20104,71301}": "Аргон 3-Док T Причал",
+  "{20104,71401}": "Аргон 3-Док E Причал",
+  "{20104,71501}": "Паранид 1-Док Причал",
+  "{20104,71601}": "Паранид 3-Док T Причал",
+  "{20104,71701}": "Паранид 3-Док E Причал",
+  "{20104,71801}": "Телади 1-Док Причал",
+  "{20104,71901}": "Телади 3-Док T Причал",
+  "{20104,72001}": "Телади 3-Док E Причал",
+  "{20104,73301}": "8M Люксовый Посадочная площадка",
+  "{20104,73401}": "Арг. Торговая станция 1-Док Причал",
+  "{20104,74901}": "Аргон Короткий Док-1 Причал",
   "{20201,101}": "Системы упреждения",
   "{20201,1101}": "Рационы питания",
   "{20201,1201}": "Детали корпуса",
