--- a/src/assets/game_data/Timelines (7.10)/locales/de.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/de.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "Hauptquartier",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "Verbundwerkstoffproduktion",
   "{20104,100101}": "Habitat-Ringerweiterung",
   "{20104,100201}": "Habitat-Ringsäule",
@@ -11,11 +11,11 @@
   "{20104,100801}": "Sensoranlage",
   "{20104,100901}": "Wartungsbereich",
   "{20104,101001}": "Belüftung",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20202,501} {20104,10001}",
+  "{20104,10101}": "Teladi Verbundwerkstoffproduktion",
   "{20104,101101}": "Stützstruktur",
   "{20104,101201}": "Kommandorelais",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "Wohnlager A",
+  "{20104,101306}": "Wohnlager B",
   "{20104,101401}": "Wohnring",
   "{20104,101601}": "Unbekanntes Modul",
   "{20104,101801}": "Xenon Basismodul",
@@ -25,23 +25,23 @@
   "{20104,102101}": "Habitat-Ringklammer",
   "{20104,102201}": "Habitat-Servicebereich",
   "{20104,10301}": "Antimateriezellenproduktion",
-  "{20104,103601}": "Penthouse-Beobachtungs\\-deck(on top/bottom of station)",
-  "{20104,103701}": "Gewächshaus-Beobachtungs\\-deck(on side of station, horizontal)",
-  "{20104,103801}": "Pavillon-Beobachtungsdeck(on side of station, vertical)",
+  "{20104,103601}": "Penthouse-Beobachtungs\\-deck",
+  "{20104,103701}": "Gewächshaus-Beobachtungs\\-deck",
+  "{20104,103801}": "Pavillon-Beobachtungsdeck",
   "{20104,10401}": "Antimateriekonverterproduktion",
   "{20104,10501}": "Nanotronikproduktion",
   "{20104,10701}": "Drohnenkomponentenproduktion",
   "{20104,10801}": "Energiezellenproduktion",
   "{20104,10901}": "Antriebsteilproduktion",
-  "{20104,11001}": "(Teladi Engine Part Production){20202,501} {20104,10901}",
-  "{20104,110201}": "Spielhalle(in context of \"station modules\"; in dialogue text, sometimes, \"Spielhölle\", the standard translation, is the better term)",
+  "{20104,11001}": "Teladi Antriebsteilproduktion",
+  "{20104,110201}": "Spielhalle",
   "{20104,11101}": "Feldspulenproduktion",
   "{20104,11201}": "Graphenproduktion",
   "{20104,11301}": "Hüllenteileproduktion",
-  "{20104,11401}": "(Teladi Hull Part Production){20202,501} {20104,11301}",
-  "{20104,11601}": "(Argon Medical Supply Production){20202,101} {20104,11501}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20202,401} {20104,11501}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20202,501} {20104,11501}",
+  "{20104,11401}": "Teladi Hüllenteileproduktion",
+  "{20104,11601}": "Argonen Medizinische Versorgungsgüter-Produktion",
+  "{20104,11701}": "Paraniden Medizinische Versorgungsgüter-Produktion",
+  "{20104,11801}": "Teladi Medizinische Versorgungsgüter-Produktion",
   "{20104,11901}": "Mikrochipproduktion",
   "{20104,12001}": "Raketenbauteilproduktion",
   "{20104,120101}": "Schrottverarbeiter",
@@ -49,7 +49,7 @@
   "{20104,12201}": "Quantumröhrenproduktion",
   "{20104,12301}": "Metallveredelungsanlage",
   "{20104,12401}": "Sensorbündelproduktion",
-  "{20104,12501}": "(Teladi Scanning Array Production){20202,501} {20104,12401}",
+  "{20104,12501}": "Teladi Sensorbündelproduktion",
   "{20104,12601}": "Schildkomponentenfabrik",
   "{20104,12701}": "Siliziumscheibenproduktion",
   "{20104,12801}": "Smart-Chip-Produktion",
@@ -74,85 +74,85 @@
   "{20104,14601}": "Teladianiumproduktion",
   "{20104,14701}": "Matrix-Solarpanel",
   "{20104,150101}": "Großraum\\-sensor\\-anlage",
-  "{20104,20101}": "(Argon S Container Storage){20202,101} {20111,5011}-{20104,20001}",
-  "{20104,20201}": "(Argon M Container Storage){20202,101} {20111,5021}-{20104,20001}",
-  "{20104,20301}": "(Argon L Container Storage){20202,101} {20111,5031}-{20104,20001}",
-  "{20104,20401}": "(Paranid S Container Storage){20202,401} {20111,5011}-{20104,20001}",
-  "{20104,20501}": "(Paranid M Container Storage){20202,401} {20111,5021}-{20104,20001}",
-  "{20104,20601}": "(Paranid L Container Storage){20202,401} {20111,5031}-{20104,20001}",
-  "{20104,20701}": "(Teladi S Container Storage){20202,501} {20111,5011}-{20104,20001}",
-  "{20104,20801}": "(Teladi M Container Storage){20202,501} {20111,5021}-{20104,20001}",
-  "{20104,20901}": "(Teladi L Container Storage){20202,501} {20111,5031}-{20104,20001}",
-  "{20104,21101}": "(Argon S Liquid Storage){20202,101} {20111,5011}-{20104,21001}",
-  "{20104,21201}": "(Argon M Liquid Storage){20202,101} {20111,5021}-{20104,21001}",
-  "{20104,21301}": "(Argon L Liquid Storage){20202,101} {20111,5031}-{20104,21001}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20202,401} {20111,5011}-{20104,21001}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20202,401} {20111,5021}-{20104,21001}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20202,401} {20111,5031}-{20104,21001}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20202,501} {20111,5011}-{20104,21001}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20202,501} {20111,5021}-{20104,21001}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20202,501} {20111,5031}-{20104,21001}",
-  "{20104,22101}": "(Argon S Solid Storage){20202,101} {20111,5011}-{20104,22001}",
-  "{20104,22201}": "(Argon M Solid Storage){20202,101} {20111,5021}-{20104,22001}",
-  "{20104,22301}": "(Argon L Solid Storage){20202,101} {20111,5031}-{20104,22001}",
-  "{20104,22401}": "(Paranid S Solid Storage){20202,401} {20111,5011}-{20104,22001}",
-  "{20104,22501}": "(Paranid M Solid Storage){20202,401} {20111,5021}-{20104,22001}",
-  "{20104,22601}": "(Paranid L Solid Storage){20202,401} {20111,5031}-{20104,22001}",
-  "{20104,22701}": "(Teladi S Solid Storage){20202,501} {20111,5011}-{20104,22001}",
-  "{20104,22801}": "(Teladi M Solid Storage){20202,501} {20111,5021}-{20104,22001}",
-  "{20104,22901}": "(Teladi L Solid Storage){20202,501} {20111,5031}-{20104,22001}",
-  "{20104,23301}": "(Argon L Universal Storage){20202,101} {20111,5031}-{20104,23001}",
+  "{20104,20101}": "Argonen S-Containerlager",
+  "{20104,20201}": "Argonen M-Containerlager",
+  "{20104,20301}": "Argonen L-Containerlager",
+  "{20104,20401}": "Paraniden S-Containerlager",
+  "{20104,20501}": "Paraniden M-Containerlager",
+  "{20104,20601}": "Paraniden L-Containerlager",
+  "{20104,20701}": "Teladi S-Containerlager",
+  "{20104,20801}": "Teladi M-Containerlager",
+  "{20104,20901}": "Teladi L-Containerlager",
+  "{20104,21101}": "Argonen S-Flüssigkeitslager",
+  "{20104,21201}": "Argonen M-Flüssigkeitslager",
+  "{20104,21301}": "Argonen L-Flüssigkeitslager",
+  "{20104,21401}": "Paraniden S-Flüssigkeitslager",
+  "{20104,21501}": "Paraniden M-Flüssigkeitslager",
+  "{20104,21601}": "Paraniden L-Flüssigkeitslager",
+  "{20104,21701}": "Teladi S-Flüssigkeitslager",
+  "{20104,21801}": "Teladi M-Flüssigkeitslager",
+  "{20104,21901}": "Teladi L-Flüssigkeitslager",
+  "{20104,22101}": "Argonen S-Feststofflager",
+  "{20104,22201}": "Argonen M-Feststofflager",
+  "{20104,22301}": "Argonen L-Feststofflager",
+  "{20104,22401}": "Paraniden S-Feststofflager",
+  "{20104,22501}": "Paraniden M-Feststofflager",
+  "{20104,22601}": "Paraniden L-Feststofflager",
+  "{20104,22701}": "Teladi S-Feststofflager",
+  "{20104,22801}": "Teladi M-Feststofflager",
+  "{20104,22901}": "Teladi L-Feststofflager",
+  "{20104,23301}": "Argonen L-Universallager",
   "{20104,24001}": "Matrix-Lager",
-  "{20104,30101}": "(Argon S Habitat){20202,101} {20111,5011}-{20104,30103}",
-  "{20104,30201}": "(Argon M Habitat){20202,101} {20111,5021}-{20104,30203}",
-  "{20104,30301}": "(Argon L Habitat){20202,101} {20111,5031}-{20104,30303}",
-  "{20104,30401}": "(Paranid S Dome){20202,401} {20111,5011}-{20104,30403}",
-  "{20104,30501}": "(Paranid M Dome){20202,401} {20111,5021}-{20104,30503}",
-  "{20104,30601}": "(Paranid L Dome){20202,401} {20111,5031}-{20104,30603}",
-  "{20104,30701}": "(Teladi S Biome){20202,501} {20111,5011}-{20104,30703}",
-  "{20104,30801}": "(Teladi M Biome){20202,501} {20111,5021}-{20104,30803}",
-  "{20104,30901}": "(Teladi L Biome){20202,501} {20111,5031}-{20104,30903}",
-  "{20104,40101}": "(Argon Administrative Centre){20202,101} {20104,40001}",
-  "{20104,40201}": "(Paranid Administrative Centre){20202,401} {20104,40001}",
-  "{20104,40301}": "(Teladi Administrative Centre){20202,501} {20104,40001}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20202,101} {20104,40501}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20202,401} {20104,40501}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20202,501} {20104,40501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20202,101} {20104,41001}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20202,401} {20104,41001}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20202,501} {20104,41001}",
-  "{20104,41601}": "(Paranid Faction Capital){20202,401} {20104,41501}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20202,101} {20104,50001} {20111,5101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20202,101} {20104,50001} {20111,5102}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20202,101} {20104,50001} {20111,5103}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20202,401} {20104,50001} {20111,5101}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20202,401} {20104,50001} {20111,5102}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20202,401} {20104,50001} {20111,5103}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20202,501} {20104,50001} {20111,5101}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20202,501} {20104,50001} {20111,5102}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20202,501} {20104,50001} {20111,5103}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20202,101} {20104,51301} {20111,5101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20202,401} {20104,51301} {20111,5101}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20202,401} {20104,51301} {20111,5102}",
-  "{20104,51701}": "(Paranid Y Connection Structure 01){20202,401} {20104,56201} {20111,5101}",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20202,501} {20104,51301} {20111,5101}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20202,101} {20104,52001} {20111,5101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20202,101} {20104,52001} {20111,5102}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20202,401} {20104,52001} {20111,5101}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20202,401} {20104,52001} {20111,5102}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20202,501} {20104,52001} {20111,5101}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20202,501} {20104,52001} {20111,5102}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20111,6001}s-{20104,50001} {20111,5101}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20111,6001}s-{20104,50001} {20111,5102}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20111,6001}s-{20104,50001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20111,6001}s-{20104,51301} {20111,5101}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20111,6001} {20104,52001} {20111,5101}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20111,6001}s-{20104,52001} {20111,5102}",
-  "{20104,55501}": "(Argon Arc Connection Structure 01){20202,101} {20104,55001} {20111,5101}",
-  "{20104,55601}": "(Argon Cross Connection Structure 03){20202,101} {20104,51301} {20111,5103}",
-  "{20104,55701}": "(Argon Cross Connection Structure 02){20202,101} {20104,51301} {20111,5102}",
-  "{20104,55901}": "(Argon L Connection Structure 01){20202,101} {20104,55801} {20111,5101}",
-  "{20104,56101}": "(Argon T Connection Structure 01){20202,101} {20104,56001} {20111,5101}",
+  "{20104,30101}": "Argonen S-Habitat",
+  "{20104,30201}": "Argonen M-Habitat",
+  "{20104,30301}": "Argonen L-Habitat",
+  "{20104,30401}": "Paraniden S-Kuppel",
+  "{20104,30501}": "Paraniden M-Kuppel",
+  "{20104,30601}": "Paraniden L-Kuppel",
+  "{20104,30701}": "Teladi S-Biom",
+  "{20104,30801}": "Teladi M-Biom",
+  "{20104,30901}": "Teladi L-Biom",
+  "{20104,40101}": "Argonen Administrations\\-zentrum",
+  "{20104,40201}": "Paraniden Administrations\\-zentrum",
+  "{20104,40301}": "Teladi Administrations\\-zentrum",
+  "{20104,40601}": "Argonen Scheiben-Verteidigungsplattform",
+  "{20104,40701}": "Paraniden Scheiben-Verteidigungsplattform",
+  "{20104,40801}": "Teladi Scheiben-Verteidigungsplattform",
+  "{20104,41101}": "Argonen Brücken-Verteidigungsplattform",
+  "{20104,41201}": "Paraniden Brücken-Verteidigungsplattform",
+  "{20104,41301}": "Teladi Brücken-Verteidigungsplattform",
+  "{20104,41601}": "Paraniden Fraktionshauptstadt",
+  "{20104,50101}": "Argonen Basis-Verbindungsgerüst 01",
+  "{20104,50201}": "Argonen Basis-Verbindungsgerüst 02",
+  "{20104,50301}": "Argonen Basis-Verbindungsgerüst 03",
+  "{20104,50401}": "Paraniden Basis-Verbindungsgerüst 01",
+  "{20104,50501}": "Paraniden Basis-Verbindungsgerüst 02",
+  "{20104,50601}": "Paraniden Basis-Verbindungsgerüst 03",
+  "{20104,50701}": "Teladi Basis-Verbindungsgerüst 01",
+  "{20104,50801}": "Teladi Basis-Verbindungsgerüst 02",
+  "{20104,50901}": "Teladi Basis-Verbindungsgerüst 03",
+  "{20104,51401}": "Argonen Kreuz-Verbindungsgerüst 01",
+  "{20104,51501}": "Paraniden Kreuz-Verbindungsgerüst 01",
+  "{20104,51601}": "Paraniden Kreuz-Verbindungsgerüst 02",
+  "{20104,51701}": "Paraniden Y-Verbindungsgerüst 01",
+  "{20104,51801}": "Teladi Kreuz-Verbindungsgerüst 01",
+  "{20104,52101}": "Argonen Vertikal-Verbindungsgerüst 01",
+  "{20104,52201}": "Argonen Vertikal-Verbindungsgerüst 02",
+  "{20104,52301}": "Paraniden Vertikal-Verbindungsgerüst 01",
+  "{20104,52401}": "Paraniden Vertikal-Verbindungsgerüst 02",
+  "{20104,52501}": "Teladi Vertikal-Verbindungsgerüst 01",
+  "{20104,52601}": "Teladi Vertikal-Verbindungsgerüst 02",
+  "{20104,52901}": "Expeditions-Basis-Verbindungsgerüst 01",
+  "{20104,53001}": "Expeditions-Basis-Verbindungsgerüst 02",
+  "{20104,53101}": "Expeditions-Basis-Verbindungsgerüst 03",
+  "{20104,53201}": "Expeditions-Kreuz-Verbindungsgerüst 01",
+  "{20104,53301}": "Expedition Vertikal-Verbindungsgerüst 01",
+  "{20104,53401}": "Expeditions-Vertikal-Verbindungsgerüst 02",
+  "{20104,55501}": "Argonen Bogen\\-verbindungs\\-struktur 01",
+  "{20104,55601}": "Argonen Kreuz-Verbindungsgerüst 03",
+  "{20104,55701}": "Argonen Kreuz-Verbindungsgerüst 02",
+  "{20104,55901}": "Argonen L-Verbindungsgerüst 01",
+  "{20104,56101}": "Argonen T-Verbindungsgerüst 01",
   "{20104,60101}": "Fertigungshangar für S-Schiffe",
   "{20104,60201}": "Fertigungshangar für M-Schiffe",
   "{20104,60301}": "Fertigungshangar für L-Schiffe",
@@ -164,27 +164,27 @@
   "{20104,61201}": "Assemblierungsanlage für XL-Schiffe",
   "{20104,61301}": "Fertigungshangar für S-/M-Schiffe",
   "{20104,61401}": "Wartungshangar für S-/M-Schiffe",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70003} {20111,5301}er {20104,70001}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70003} {20111,5302}-{20104,70001}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70003} {20111,5303}-{20104,70001}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70004} {20111,5301}er {20104,70001}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70004} {20111,5302}-{20104,70001}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70004} {20111,5303}-{20104,70001}",
-  "{20104,70801}": "{20111,5011}/{20111,5021}-{20104,70701}",
-  "{20104,70901}": "{20111,5031}/{20111,5041}-{20104,70701}",
+  "{20104,70101}": "1M6S Einfacher Dockbereich",
+  "{20104,70201}": "1M6S Standard-Dockbereich",
+  "{20104,70301}": "1M6S Luxus-Dockbereich",
+  "{20104,70401}": "3M6S Einfacher Dockbereich",
+  "{20104,70501}": "3M6S Standard-Dockbereich",
+  "{20104,70601}": "3M6S Luxus-Dockbereich",
+  "{20104,70801}": "S/M-Expeditionsdock",
+  "{20104,70901}": "L/XL-Expeditionsdock",
   "{20104,71001}": "Xenon-Dock",
-  "{20104,71201}": "(Argon 1-Dock Pier){20202,101} {20104,71103}-{20104,71101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20202,101} {20104,71104}-{20104,71101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20202,101} {20104,71105}-{20104,71101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20202,401} {20104,71103}-{20104,71101}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20202,401} {20104,71104}-{20104,71101}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20202,401} {20104,71105}-{20104,71101}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20202,501} {20104,71103}-{20104,71101}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20202,501} {20104,71104}-{20104,71101}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20202,501} {20104,71105}-{20104,71101}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70005} {20111,5303} {20104,70001}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20102,1111} {20104,71103}-{20104,71101}",
-  "{20104,74901}": "(Argon 1-Dock Short Pier){20202,101} {20104,71109} {20104,71101}",
+  "{20104,71201}": "Argonen Einzeldock-Raumpier",
+  "{20104,71301}": "Argonen T-Dreierdock-Raumpier",
+  "{20104,71401}": "Argonen E-Dreierdock-Raumpier",
+  "{20104,71501}": "Paraniden Einzeldock-Raumpier",
+  "{20104,71601}": "Paraniden T-Dreierdock-Raumpier",
+  "{20104,71701}": "Paraniden E-Dreierdock-Raumpier",
+  "{20104,71801}": "Teladi Einzeldock-Raumpier",
+  "{20104,71901}": "Teladi T-Dreierdock-Raumpier",
+  "{20104,72001}": "Teladi E-Dreierdock-Raumpier",
+  "{20104,73301}": "8M Luxus Dockbereich",
+  "{20104,73401}": "Argon Handelsstation Einzeldock-Raumpier",
+  "{20104,74901}": "Argonen Einzeldock kurz Raumpier",
   "{20201,101}": "Elektronikkomponenten",
   "{20201,1101}": "Nahrungsrationen",
   "{20201,1201}": "Hüllenteile",
@@ -228,7 +228,7 @@
   "{20201,4901}": "Weizen",
   "{20201,501}": "Nanotronik",
   "{20201,601}": "Drohnenbauteile",
-  "{20201,6601}": "Schrott(!In some contexts, \"Altmetall\" makes more sense!)",
+  "{20201,6601}": "Schrott",
   "{20201,6801}": "Rohschrott",
   "{20201,701}": "Energiezellen",
   "{20201,801}": "Antriebsteile",
