--- a/src/assets/game_data/Timelines (7.10)/locales/ja.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/ja.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "本部",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "高度化合物の製造",
   "{20104,100101}": "居住施設用リングの拡張",
   "{20104,100201}": "居住施設用リングの柱",
@@ -11,11 +11,11 @@
   "{20104,100801}": "センサーアレイ",
   "{20104,100901}": "整備場",
   "{20104,101001}": "排気口",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20202,501} {20104,10001}",
+  "{20104,10101}": "テラディ 高度化合物の製造",
   "{20104,101101}": "支持構造物",
   "{20104,101201}": "指揮中継所",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "居住施設用保管庫 A",
+  "{20104,101306}": "居住施設用保管庫 B",
   "{20104,101401}": "居住施設用リング",
   "{20104,101601}": "不明なモジュール",
   "{20104,101801}": "ゼノン 基地モジュール",
@@ -25,23 +25,23 @@
   "{20104,102101}": "居住施設用リング締着装置",
   "{20104,102201}": "居住施設サービス区",
   "{20104,10301}": "反物質セルの製造",
-  "{20104,103601}": "ペントハウス展望デッキ(on top/bottom of station)",
-  "{20104,103701}": "サンルーム展望デッキ(on side of station)",
-  "{20104,103801}": "パビリオン展望デッキ(on side of station, vertical)",
+  "{20104,103601}": "ペントハウス展望デッキ",
+  "{20104,103701}": "サンルーム展望デッキ",
+  "{20104,103801}": "パビリオン展望デッキ",
   "{20104,10401}": "反物質コンバーターの製造",
   "{20104,10501}": "クレイトロニクスの製造",
   "{20104,10701}": "ドローン部品の製造",
   "{20104,10801}": "エネルギーセルの製造",
   "{20104,10901}": "エンジン部品の製造",
-  "{20104,11001}": "(Teladi Engine Part Production){20202,501} {20104,10901}",
+  "{20104,11001}": "テラディ エンジン部品の製造",
   "{20104,110201}": "賭博場",
   "{20104,11101}": "フィールドコイルの製造",
   "{20104,11201}": "グラフェンの製造",
   "{20104,11301}": "船体部品の製造",
-  "{20104,11401}": "(Teladi Hull Part Production){20202,501} {20104,11301}",
-  "{20104,11601}": "(Argon Medical Supply Production){20202,101} {20104,11501}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20202,401} {20104,11501}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20202,501} {20104,11501}",
+  "{20104,11401}": "テラディ 船体部品の製造",
+  "{20104,11601}": "アルゴン 医療品の製造",
+  "{20104,11701}": "パラニド 医療品の製造",
+  "{20104,11801}": "テラディ 医療品の製造",
   "{20104,11901}": "マイクロチップの製造",
   "{20104,12001}": "ミサイル部品の製造",
   "{20104,120101}": "スクラップ処理機",
@@ -49,7 +49,7 @@
   "{20104,12201}": "量子チューブの製造",
   "{20104,12301}": "製錬金属の製造",
   "{20104,12401}": "スキャンアレイの製造",
-  "{20104,12501}": "(Teladi Scanning Array Production){20202,501} {20104,12401}",
+  "{20104,12501}": "テラディ スキャンアレイの製造",
   "{20104,12601}": "シールド部品の製造",
   "{20104,12701}": "シリコンウェハーの製造",
   "{20104,12801}": "スマートチップの製造",
@@ -74,85 +74,85 @@
   "{20104,14601}": "テラディアニウムの生産",
   "{20104,14701}": "マトリックスソーラーパネル",
   "{20104,150101}": "広域センサーアレイ",
-  "{20104,20101}": "(Argon S Container Storage){20202,101} {20111,5011} {20104,20001}",
-  "{20104,20201}": "(Argon M Container Storage){20202,101} {20111,5021} {20104,20001}",
-  "{20104,20301}": "(Argon L Container Storage){20202,101} {20111,5031} {20104,20001}",
-  "{20104,20401}": "(Paranid S Container Storage){20202,401} {20111,5011} {20104,20001}",
-  "{20104,20501}": "(Paranid M Container Storage){20202,401} {20111,5021} {20104,20001}",
-  "{20104,20601}": "(Paranid L Container Storage){20202,401} {20111,5031} {20104,20001}",
-  "{20104,20701}": "(Teladi S Container Storage){20202,501} {20111,5011} {20104,20001}",
-  "{20104,20801}": "(Teladi M Container Storage){20202,501} {20111,5021} {20104,20001}",
-  "{20104,20901}": "(Teladi L Container Storage){20202,501} {20111,5031} {20104,20001}",
-  "{20104,21101}": "(Argon S Liquid Storage){20202,101} {20111,5011} {20104,21001}",
-  "{20104,21201}": "(Argon M Liquid Storage){20202,101} {20111,5021} {20104,21001}",
-  "{20104,21301}": "(Argon L Liquid Storage){20202,101} {20111,5031} {20104,21001}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20202,401} {20111,5011} {20104,21001}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20202,401} {20111,5021} {20104,21001}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20202,401} {20111,5031} {20104,21001}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20202,501} {20111,5011} {20104,21001}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20202,501} {20111,5021} {20104,21001}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20202,501} {20111,5031} {20104,21001}",
-  "{20104,22101}": "(Argon S Solid Storage){20202,101} {20111,5011} {20104,22001}",
-  "{20104,22201}": "(Argon M Solid Storage){20202,101} {20111,5021} {20104,22001}",
-  "{20104,22301}": "(Argon L Solid Storage){20202,101} {20111,5031} {20104,22001}",
-  "{20104,22401}": "(Paranid S Solid Storage){20202,401} {20111,5011} {20104,22001}",
-  "{20104,22501}": "(Paranid M Solid Storage){20202,401} {20111,5021} {20104,22001}",
-  "{20104,22601}": "(Paranid L Solid Storage){20202,401} {20111,5031} {20104,22001}",
-  "{20104,22701}": "(Teladi S Solid Storage){20202,501} {20111,5011} {20104,22001}",
-  "{20104,22801}": "(Teladi M Solid Storage){20202,501} {20111,5021} {20104,22001}",
-  "{20104,22901}": "(Teladi L Solid Storage){20202,501} {20111,5031} {20104,22001}",
-  "{20104,23301}": "(Argon L Universal Storage){20202,101} {20111,5031} {20104,23001}",
+  "{20104,20101}": "アルゴン 小型 コンテナ保管庫",
+  "{20104,20201}": "アルゴン 中型 コンテナ保管庫",
+  "{20104,20301}": "アルゴン 大型 コンテナ保管庫",
+  "{20104,20401}": "パラニド 小型 コンテナ保管庫",
+  "{20104,20501}": "パラニド 中型 コンテナ保管庫",
+  "{20104,20601}": "パラニド 大型 コンテナ保管庫",
+  "{20104,20701}": "テラディ 小型 コンテナ保管庫",
+  "{20104,20801}": "テラディ 中型 コンテナ保管庫",
+  "{20104,20901}": "テラディ 大型 コンテナ保管庫",
+  "{20104,21101}": "アルゴン 小型 液体物保管庫",
+  "{20104,21201}": "アルゴン 中型 液体物保管庫",
+  "{20104,21301}": "アルゴン 大型 液体物保管庫",
+  "{20104,21401}": "パラニド 小型 液体物保管庫",
+  "{20104,21501}": "パラニド 中型 液体物保管庫",
+  "{20104,21601}": "パラニド 大型 液体物保管庫",
+  "{20104,21701}": "テラディ 小型 液体物保管庫",
+  "{20104,21801}": "テラディ 中型 液体物保管庫",
+  "{20104,21901}": "テラディ 大型 液体物保管庫",
+  "{20104,22101}": "アルゴン 小型 固体物保管庫",
+  "{20104,22201}": "アルゴン 中型 固体物保管庫",
+  "{20104,22301}": "アルゴン 大型 固体物保管庫",
+  "{20104,22401}": "パラニド 小型 固体物保管庫",
+  "{20104,22501}": "パラニド 中型 固体物保管庫",
+  "{20104,22601}": "パラニド 大型 固体物保管庫",
+  "{20104,22701}": "テラディ 小型 固体物保管庫",
+  "{20104,22801}": "テラディ 中型 固体物保管庫",
+  "{20104,22901}": "テラディ 大型 固体物保管庫",
+  "{20104,23301}": "アルゴン 大型 総合保管庫",
   "{20104,24001}": "マトリックス保管庫",
-  "{20104,30101}": "(Argon S Habitat){20202,101} {20111,5011} {20104,30103}",
-  "{20104,30201}": "(Argon M Habitat){20202,101} {20111,5021} {20104,30203}",
-  "{20104,30301}": "(Argon L Habitat){20202,101} {20111,5031} {20104,30303}",
-  "{20104,30401}": "(Paranid S Dome){20202,401} {20111,5011} {20104,30403}",
-  "{20104,30501}": "(Paranid M Dome){20202,401} {20111,5021} {20104,30503}",
-  "{20104,30601}": "(Paranid L Dome){20202,401} {20111,5031} {20104,30603}",
-  "{20104,30701}": "(Teladi S Biome){20202,501} {20111,5011} {20104,30703}",
-  "{20104,30801}": "(Teladi M Biome){20202,501} {20111,5021} {20104,30803}",
-  "{20104,30901}": "(Teladi L Biome){20202,501} {20111,5031} {20104,30903}",
-  "{20104,40101}": "(Argon Administrative Centre){20202,101} {20104,40001}",
-  "{20104,40201}": "(Paranid Administrative Centre){20202,401} {20104,40001}",
-  "{20104,40301}": "(Teladi Administrative Centre){20202,501} {20104,40001}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20202,101} {20104,40501}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20202,401} {20104,40501}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20202,501} {20104,40501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20202,101} {20104,41001}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20202,401} {20104,41001}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20202,501} {20104,41001}",
-  "{20104,41601}": "(Paranid Faction Capital){20202,401} {20104,41501}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20202,101} {20104,50001} {20111,5101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20202,101} {20104,50001} {20111,5102}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20202,101} {20104,50001} {20111,5103}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20202,401} {20104,50001} {20111,5101}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20202,401} {20104,50001} {20111,5102}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20202,401} {20104,50001} {20111,5103}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20202,501} {20104,50001} {20111,5101}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20202,501} {20104,50001} {20111,5102}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20202,501} {20104,50001} {20111,5103}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20202,101} {20104,51301} {20111,5101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20202,401} {20104,51301} {20111,5101}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20202,401} {20104,51301} {20111,5102}",
-  "{20104,51701}": "(Paranid Y Connection Structure 01){20202,401} {20104,56201} {20111,5101}",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20202,501} {20104,51301} {20111,5101}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20202,101} {20104,52001} {20111,5101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20202,101} {20104,52001} {20111,5102}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20202,401} {20104,52001} {20111,5101}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20202,401} {20104,52001} {20111,5102}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20202,501} {20104,52001} {20111,5101}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20202,501} {20104,52001} {20111,5102}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20111,6001} {20104,50001} {20111,5101}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20111,6001} {20104,50001} {20111,5102}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20111,6001} {20104,50001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20111,6001} {20104,51301} {20111,5101}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20111,6001} {20104,52001} {20111,5101}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20111,6001} {20104,52001} {20111,5102}",
-  "{20104,55501}": "(Argon Arc Connection Structure 01){20202,101} {20104,55001} {20111,5101}",
-  "{20104,55601}": "(Argon Cross Connection Structure 03){20202,101} {20104,51301} {20111,5103}",
-  "{20104,55701}": "(Argon Cross Connection Structure 02){20202,101} {20104,51301} {20111,5102}",
-  "{20104,55901}": "(Argon L Connection Structure 01){20202,101} {20104,55801} {20111,5101}",
-  "{20104,56101}": "(Argon T Connection Structure 01){20202,101} {20104,56001} {20111,5101}",
+  "{20104,30101}": "アルゴン 小型 居住施設",
+  "{20104,30201}": "アルゴン 中型 居住施設",
+  "{20104,30301}": "アルゴン 大型 居住施設",
+  "{20104,30401}": "パラニド 小型 ドーム",
+  "{20104,30501}": "パラニド 中型 ドーム",
+  "{20104,30601}": "パラニド 大型 ドーム",
+  "{20104,30701}": "テラディ 小型 バイオーム",
+  "{20104,30801}": "テラディ 中型 バイオーム",
+  "{20104,30901}": "テラディ 大型 バイオーム",
+  "{20104,40101}": "アルゴン 管理センター",
+  "{20104,40201}": "パラニド 管理センター",
+  "{20104,40301}": "テラディ 管理センター",
+  "{20104,40601}": "アルゴン ディスク防衛プラットフォーム",
+  "{20104,40701}": "パラニド ディスク防衛プラットフォーム",
+  "{20104,40801}": "テラディ ディスク防衛プラットフォーム",
+  "{20104,41101}": "アルゴン ブリッジ防衛プラットフォーム",
+  "{20104,41201}": "パラニド ブリッジ防衛プラットフォーム",
+  "{20104,41301}": "テラディ ブリッジ防衛プラットフォーム",
+  "{20104,41601}": "パラニド 派閥中枢",
+  "{20104,50101}": "アルゴン 基礎接続構造体 01",
+  "{20104,50201}": "アルゴン 基礎接続構造体 02",
+  "{20104,50301}": "アルゴン 基礎接続構造体 03",
+  "{20104,50401}": "パラニド 基礎接続構造体 01",
+  "{20104,50501}": "パラニド 基礎接続構造体 02",
+  "{20104,50601}": "パラニド 基礎接続構造体 03",
+  "{20104,50701}": "テラディ 基礎接続構造体 01",
+  "{20104,50801}": "テラディ 基礎接続構造体 02",
+  "{20104,50901}": "テラディ 基礎接続構造体 03",
+  "{20104,51401}": "アルゴン 十字接続構造体 01",
+  "{20104,51501}": "パラニド 十字接続構造体 01",
+  "{20104,51601}": "パラニド 十字接続構造体 02",
+  "{20104,51701}": "パラニド Y字接続構造体 01",
+  "{20104,51801}": "テラディ 十字接続構造体 01",
+  "{20104,52101}": "アルゴン 垂直接続構造体 01",
+  "{20104,52201}": "アルゴン 垂直接続構造体 02",
+  "{20104,52301}": "パラニド 垂直接続構造体 01",
+  "{20104,52401}": "パラニド 垂直接続構造体 02",
+  "{20104,52501}": "テラディ 垂直接続構造体 01",
+  "{20104,52601}": "テラディ 垂直接続構造体 02",
+  "{20104,52901}": "探険 基礎接続構造体 01",
+  "{20104,53001}": "探険 基礎接続構造体 02",
+  "{20104,53101}": "探険 基礎接続構造体 03",
+  "{20104,53201}": "探険 十字接続構造体 01",
+  "{20104,53301}": "探険 垂直接続構造体 01",
+  "{20104,53401}": "探険 垂直接続構造体 02",
+  "{20104,55501}": "アルゴン アーク接続構造体 01",
+  "{20104,55601}": "アルゴン 十字接続構造体 03",
+  "{20104,55701}": "アルゴン 十字接続構造体 02",
+  "{20104,55901}": "アルゴン L字接続構造体 01",
+  "{20104,56101}": "アルゴン T字接続構造体 01",
   "{20104,60101}": "小型艦船製造ベイ",
   "{20104,60201}": "中型艦船製造ベイ",
   "{20104,60301}": "大型艦船製造ベイ",
@@ -164,27 +164,27 @@
   "{20104,61201}": "特大型艦船組み立てマトリックス",
   "{20104,61301}": "小/中型艦船製造ベイ",
   "{20104,61401}": "小/中型艦船整備ベイ",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70003} {20111,5301} {20104,70001}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70003} {20111,5302} {20104,70001}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70003} {20111,5303} {20104,70001}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70004} {20111,5301} {20104,70001}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70004} {20111,5302} {20104,70001}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70004} {20111,5303} {20104,70001}",
-  "{20104,70801}": "(S/M Venture Sendoff Dock){20111,5011}/{20111,5021} {20104,70701}",
-  "{20104,70901}": "(L/XL Venture Sendoff Dock){20111,5031}/{20111,5041} {20104,70701}",
+  "{20104,70101}": "中型1 小型6 基本 ドックエリア",
+  "{20104,70201}": "中型1 小型6 標準 ドックエリア",
+  "{20104,70301}": "中型1 小型6 高級 ドックエリア",
+  "{20104,70401}": "中型3 小型6 基本 ドックエリア",
+  "{20104,70501}": "中型3 小型6 標準 ドックエリア",
+  "{20104,70601}": "中型3 小型6 高級 ドックエリア",
+  "{20104,70801}": "小型/中型 探険船派遣ドック",
+  "{20104,70901}": "大型/特大型 探険船派遣ドック",
   "{20104,71001}": "ゼノン ドック",
-  "{20104,71201}": "(Argon 1-Dock Pier){20202,101} {20104,71103} {20104,71101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20202,101} {20104,71104} {20104,71101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20202,101} {20104,71105} {20104,71101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20202,401} {20104,71103} {20104,71101}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20202,401} {20104,71104} {20104,71101}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20202,401} {20104,71105} {20104,71101}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20202,501} {20104,71103} {20104,71101}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20202,501} {20104,71104} {20104,71101}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20202,501} {20104,71105} {20104,71101}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70005} {20111,5303} {20104,70001}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20102,1111} {20104,71103} {20104,71101}",
-  "{20104,74901}": "(Argon 1-Dock Short Pier){20202,101} {20104,71109} {20104,71101}",
+  "{20104,71201}": "アルゴン 1-ドック 桟橋",
+  "{20104,71301}": "アルゴン 3-ドック T 桟橋",
+  "{20104,71401}": "アルゴン 3-ドック E 桟橋",
+  "{20104,71501}": "パラニド 1-ドック 桟橋",
+  "{20104,71601}": "パラニド 3-ドック T 桟橋",
+  "{20104,71701}": "パラニド 3-ドック E 桟橋",
+  "{20104,71801}": "テラディ 1-ドック 桟橋",
+  "{20104,71901}": "テラディ 3-ドック T 桟橋",
+  "{20104,72001}": "テラディ 3-ドック E 桟橋",
+  "{20104,73301}": "中型8 高級 ドックエリア",
+  "{20104,73401}": "アルゴン交易ステーション 1-ドック 桟橋",
+  "{20104,74901}": "アルゴン 1-ドック 短 桟橋",
   "{20201,101}": "高度電子機器",
   "{20201,1101}": "糧食",
   "{20201,1201}": "船体部品",
