--- a/src/assets/game_data/Timelines (7.10)/locales/pl.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/pl.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "Kwatera główna",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "Produkcja kompozytów zaawan.",
   "{20104,100101}": "Rozszerzenie pierścienia mieszkalnego",
   "{20104,100201}": "Słupek pierścienia mieszkalnego",
@@ -11,11 +11,11 @@
   "{20104,100801}": "Tablica sensorów",
   "{20104,100901}": "Obszar serwisowy",
   "{20104,101001}": "Wentylacja",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20202,501} {20104,10001}",
+  "{20104,10101}": "Teladianie Produkcja kompozytów zaawan.",
   "{20104,101101}": "Konstrukcja nośna",
   "{20104,101201}": "Przekaźnik poleceń",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "Magazyn obszaru mieszkalnego A",
+  "{20104,101306}": "Magazyn obszaru mieszkalnego B",
   "{20104,101401}": "Pierścień obszaru mieszkalnego",
   "{20104,101601}": "Nieznany moduł",
   "{20104,101801}": "Moduł bazy Xenonów",
@@ -25,23 +25,23 @@
   "{20104,102101}": "Kleszcze pierścienia obszaru mieszkalnego",
   "{20104,102201}": "Sekcja usługowa obszaru mieszkalnego",
   "{20104,10301}": "Produkcja ogniw antymaterii",
-  "{20104,103601}": "Taras widokowy Apartamentu(na górze/dole stacji)",
-  "{20104,103701}": "Taras widokowy Konserwatorium (z boku stacji, poziomo)",
-  "{20104,103801}": "Taras obserwacyjny pawilonu (z boku stacji, pionowy)",
+  "{20104,103601}": "Taras widokowy Apartamentu",
+  "{20104,103701}": "Taras widokowy Konserwatorium",
+  "{20104,103801}": "Taras obserwacyjny pawilonu",
   "{20104,10401}": "Produkcja konwertera antymaterii",
   "{20104,10501}": "Produkcja claytroniki",
   "{20104,10701}": "Produkcja komponentów drona",
   "{20104,10801}": "Produkcja ogniw energetycznych",
   "{20104,10901}": "Produkcja części silnikowych",
-  "{20104,11001}": "(Teladi Engine Part Production){20202,501} {20104,10901}",
+  "{20104,11001}": "Teladianie Produkcja części silnikowych",
   "{20104,110201}": "Jaskinia hazardu",
   "{20104,11101}": "Produkcja cewek",
   "{20104,11201}": "Produkcja grafenu",
   "{20104,11301}": "Produkcja części kadłuba",
-  "{20104,11401}": "(Teladi Hull Part Production){20202,501} {20104,11301}",
-  "{20104,11601}": "(Argon Medical Supply Production){20202,101} {20104,11501}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20202,401} {20104,11501}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20202,501} {20104,11501}",
+  "{20104,11401}": "Teladianie Produkcja części kadłuba",
+  "{20104,11601}": "Argoni Produkcja zaopatrzenia medycznego",
+  "{20104,11701}": "Paranidianie Produkcja zaopatrzenia medycznego",
+  "{20104,11801}": "Teladianie Produkcja zaopatrzenia medycznego",
   "{20104,11901}": "Produkcja mikrochipów",
   "{20104,12001}": "Produkcja komponentów rakietowych",
   "{20104,120101}": "Przetwórnia złomu",
@@ -49,7 +49,7 @@
   "{20104,12201}": "Produkcja tub kwantowych",
   "{20104,12301}": "Produkcja metali rafinowanych",
   "{20104,12401}": "Produkcja matryc skanujących",
-  "{20104,12501}": "(Teladi Scanning Array Production){20202,501} {20104,12401}",
+  "{20104,12501}": "Teladianie Produkcja matryc skanujących",
   "{20104,12601}": "Produkcja komponentów osłony",
   "{20104,12701}": "Produkcja wafli krzemowych",
   "{20104,12801}": "Produkcja inteligentnych chipów",
@@ -74,85 +74,85 @@
   "{20104,14601}": "Produkcja teladianium",
   "{20104,14701}": "Matrycowy panel słoneczny",
   "{20104,150101}": "Szerokopasmowe matryce czujników",
-  "{20104,20101}": "(Argon S Container Storage){20202,101} {20111,5011} {20104,20001}",
-  "{20104,20201}": "(Argon M Container Storage){20202,101} {20111,5021} {20104,20001}",
-  "{20104,20301}": "(Argon L Container Storage){20202,101} {20111,5031} {20104,20001}",
-  "{20104,20401}": "(Paranid S Container Storage){20202,401} {20111,5011} {20104,20001}",
-  "{20104,20501}": "(Paranid M Container Storage){20202,401} {20111,5021} {20104,20001}",
-  "{20104,20601}": "(Paranid L Container Storage){20202,401} {20111,5031} {20104,20001}",
-  "{20104,20701}": "(Teladi S Container Storage){20202,501} {20111,5011} {20104,20001}",
-  "{20104,20801}": "(Teladi M Container Storage){20202,501} {20111,5021} {20104,20001}",
-  "{20104,20901}": "(Teladi L Container Storage){20202,501} {20111,5031} {20104,20001}",
-  "{20104,21101}": "(Argon S Liquid Storage){20202,101} {20111,5011} {20104,21001}",
-  "{20104,21201}": "(Argon M Liquid Storage){20202,101} {20111,5021} {20104,21001}",
-  "{20104,21301}": "(Argon L Liquid Storage){20202,101} {20111,5031} {20104,21001}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20202,401} {20111,5011} {20104,21001}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20202,401} {20111,5021} {20104,21001}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20202,401} {20111,5031} {20104,21001}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20202,501} {20111,5011} {20104,21001}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20202,501} {20111,5021} {20104,21001}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20202,501} {20111,5031} {20104,21001}",
-  "{20104,22101}": "(Argon S Solid Storage){20202,101} {20111,5011} {20104,22001}",
-  "{20104,22201}": "(Argon M Solid Storage){20202,101} {20111,5021} {20104,22001}",
-  "{20104,22301}": "(Argon L Solid Storage){20202,101} {20111,5031} {20104,22001}",
-  "{20104,22401}": "(Paranid S Solid Storage){20202,401} {20111,5011} {20104,22001}",
-  "{20104,22501}": "(Paranid M Solid Storage){20202,401} {20111,5021} {20104,22001}",
-  "{20104,22601}": "(Paranid L Solid Storage){20202,401} {20111,5031} {20104,22001}",
-  "{20104,22701}": "(Teladi S Solid Storage){20202,501} {20111,5011} {20104,22001}",
-  "{20104,22801}": "(Teladi M Solid Storage){20202,501} {20111,5021} {20104,22001}",
-  "{20104,22901}": "(Teladi L Solid Storage){20202,501} {20111,5031} {20104,22001}",
-  "{20104,23301}": "(Argon L Universal Storage){20202,101} {20111,5031} {20104,23001}",
+  "{20104,20101}": "Argoni S Magazyn kontenerowy",
+  "{20104,20201}": "Argoni M Magazyn kontenerowy",
+  "{20104,20301}": "Argoni L Magazyn kontenerowy",
+  "{20104,20401}": "Paranidianie S Magazyn kontenerowy",
+  "{20104,20501}": "Paranidianie M Magazyn kontenerowy",
+  "{20104,20601}": "Paranidianie L Magazyn kontenerowy",
+  "{20104,20701}": "Teladianie S Magazyn kontenerowy",
+  "{20104,20801}": "Teladianie M Magazyn kontenerowy",
+  "{20104,20901}": "Teladianie L Magazyn kontenerowy",
+  "{20104,21101}": "Argoni S Magazyn płynów",
+  "{20104,21201}": "Argoni M Magazyn płynów",
+  "{20104,21301}": "Argoni L Magazyn płynów",
+  "{20104,21401}": "Paranidianie S Magazyn płynów",
+  "{20104,21501}": "Paranidianie M Magazyn płynów",
+  "{20104,21601}": "Paranidianie L Magazyn płynów",
+  "{20104,21701}": "Teladianie S Magazyn płynów",
+  "{20104,21801}": "Teladianie M Magazyn płynów",
+  "{20104,21901}": "Teladianie L Magazyn płynów",
+  "{20104,22101}": "Argoni S Magazyn stały",
+  "{20104,22201}": "Argoni M Magazyn stały",
+  "{20104,22301}": "Argoni L Magazyn stały",
+  "{20104,22401}": "Paranidianie S Magazyn stały",
+  "{20104,22501}": "Paranidianie M Magazyn stały",
+  "{20104,22601}": "Paranidianie L Magazyn stały",
+  "{20104,22701}": "Teladianie S Magazyn stały",
+  "{20104,22801}": "Teladianie M Magazyn stały",
+  "{20104,22901}": "Teladianie L Magazyn stały",
+  "{20104,23301}": "Argoni L Magazyn uniwersalny",
   "{20104,24001}": "Matryca magazynów",
-  "{20104,30101}": "(Argon S Habitat){20202,101} {20111,5011} {20104,30103}",
-  "{20104,30201}": "(Argon M Habitat){20202,101} {20111,5021} {20104,30203}",
-  "{20104,30301}": "(Argon L Habitat){20202,101} {20111,5031} {20104,30303}",
-  "{20104,30401}": "(Paranid S Dome){20202,401} {20111,5011} {20104,30403}",
-  "{20104,30501}": "(Paranid M Dome){20202,401} {20111,5021} {20104,30503}",
-  "{20104,30601}": "(Paranid L Dome){20202,401} {20111,5031} {20104,30603}",
-  "{20104,30701}": "(Teladi S Biome){20202,501} {20111,5011} {20104,30703}",
-  "{20104,30801}": "(Teladi M Biome){20202,501} {20111,5021} {20104,30803}",
-  "{20104,30901}": "(Teladi L Biome){20202,501} {20111,5031} {20104,30903}",
-  "{20104,40101}": "(Argon Administrative Centre){20202,101} {20104,40001}",
-  "{20104,40201}": "(Paranid Administrative Centre){20202,401} {20104,40001}",
-  "{20104,40301}": "(Teladi Administrative Centre){20202,501} {20104,40001}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20202,101} {20104,40501}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20202,401} {20104,40501}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20202,501} {20104,40501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20202,101} {20104,41001}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20202,401} {20104,41001}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20202,501} {20104,41001}",
-  "{20104,41601}": "(Paranid Faction Capital){20202,401} {20104,41501}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20202,101} {20104,50001} {20111,5101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20202,101} {20104,50001} {20111,5102}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20202,101} {20104,50001} {20111,5103}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20202,401} {20104,50001} {20111,5101}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20202,401} {20104,50001} {20111,5102}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20202,401} {20104,50001} {20111,5103}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20202,501} {20104,50001} {20111,5101}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20202,501} {20104,50001} {20111,5102}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20202,501} {20104,50001} {20111,5103}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20202,101} {20104,51301} {20111,5101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20202,401} {20104,51301} {20111,5101}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20202,401} {20104,51301} {20111,5102}",
-  "{20104,51701}": "(Paranid Y Connection Structure 01){20202,401} {20104,56201} {20111,5101}",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20202,501} {20104,51301} {20111,5101}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20202,101} {20104,52001} {20111,5101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20202,101} {20104,52001} {20111,5102}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20202,401} {20104,52001} {20111,5101}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20202,401} {20104,52001} {20111,5102}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20202,501} {20104,52001} {20111,5101}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20202,501} {20104,52001} {20111,5102}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20104,50001} {20111,6001} {20111,5101}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20104,50001} {20111,6001} {20111,5102}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20104,50001} {20111,6001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20104,51301} {20111,6001} {20111,5101}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20104,52001} {20111,6001} {20111,5101}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20104,52001} {20111,6001} {20111,5102}",
-  "{20104,55501}": "(Argon Arc Connection Structure 01){20202,101} {20104,55001} {20111,5101}",
-  "{20104,55601}": "(Argon Cross Connection Structure 03){20202,101} {20104,51301} {20111,5103}",
-  "{20104,55701}": "(Argon Cross Connection Structure 02){20202,101} {20104,51301} {20111,5102}",
-  "{20104,55901}": "(Argon L Connection Structure 01){20202,101} {20104,55801} {20111,5101}",
-  "{20104,56101}": "(Argon T Connection Structure 01){20202,101} {20104,56001} {20111,5101}",
+  "{20104,30101}": "Argoni S Obszar mieszkalny",
+  "{20104,30201}": "Argoni M Obszar mieszkalny",
+  "{20104,30301}": "Argoni L Obszar mieszkalny",
+  "{20104,30401}": "Paranidianie S Kopuła",
+  "{20104,30501}": "Paranidianie M Kopuła",
+  "{20104,30601}": "Paranidianie L Kopuła",
+  "{20104,30701}": "Teladianie S Biom",
+  "{20104,30801}": "Teladianie M Biom",
+  "{20104,30901}": "Teladianie L Biom",
+  "{20104,40101}": "Argoni Centrum administracyjne",
+  "{20104,40201}": "Paranidianie Centrum administracyjne",
+  "{20104,40301}": "Teladianie Centrum administracyjne",
+  "{20104,40601}": "Argoni Okrągła platforma obronna",
+  "{20104,40701}": "Paranidianie Okrągła platforma obronna",
+  "{20104,40801}": "Teladianie Okrągła platforma obronna",
+  "{20104,41101}": "Argoni Mostowa platforma obronna",
+  "{20104,41201}": "Paranidianie Mostowa platforma obronna",
+  "{20104,41301}": "Teladianie Mostowa platforma obronna",
+  "{20104,41601}": "Paranidianie Stolica frakcji",
+  "{20104,50101}": "Argoni Podstawowa struktura łączeniowa 01",
+  "{20104,50201}": "Argoni Podstawowa struktura łączeniowa 02",
+  "{20104,50301}": "Argoni Podstawowa struktura łączeniowa 03",
+  "{20104,50401}": "Paranidianie Podstawowa struktura łączeniowa 01",
+  "{20104,50501}": "Paranidianie Podstawowa struktura łączeniowa 02",
+  "{20104,50601}": "Paranidianie Podstawowa struktura łączeniowa 03",
+  "{20104,50701}": "Teladianie Podstawowa struktura łączeniowa 01",
+  "{20104,50801}": "Teladianie Podstawowa struktura łączeniowa 02",
+  "{20104,50901}": "Teladianie Podstawowa struktura łączeniowa 03",
+  "{20104,51401}": "Argoni Krzyżakowa struktura łączeniowa 01",
+  "{20104,51501}": "Paranidianie Krzyżakowa struktura łączeniowa 01",
+  "{20104,51601}": "Paranidianie Krzyżakowa struktura łączeniowa 02",
+  "{20104,51701}": "Paranidianie Struktura łączeniowa Y 01",
+  "{20104,51801}": "Teladianie Krzyżakowa struktura łączeniowa 01",
+  "{20104,52101}": "Argoni Pionowa struktura łączeniowa 01",
+  "{20104,52201}": "Argoni Pionowa struktura łączeniowa 02",
+  "{20104,52301}": "Paranidianie Pionowa struktura łączeniowa 01",
+  "{20104,52401}": "Paranidianie Pionowa struktura łączeniowa 02",
+  "{20104,52501}": "Teladianie Pionowa struktura łączeniowa 01",
+  "{20104,52601}": "Teladianie Pionowa struktura łączeniowa 02",
+  "{20104,52901}": "Podstawowa struktura łączeniowa Wyprawy 01",
+  "{20104,53001}": "Podstawowa struktura łączeniowa Wyprawy 02",
+  "{20104,53101}": "Podstawowa struktura łączeniowa Wyprawy 03",
+  "{20104,53201}": "Krzyżakowa struktura łączeniowa Wyprawy 01",
+  "{20104,53301}": "Pionowa struktura łączeniowa Wyprawy 01",
+  "{20104,53401}": "Pionowa struktura łączeniowa Wyprawy 02",
+  "{20104,55501}": "Argoni Struktura połączenia łukowego 01",
+  "{20104,55601}": "Argoni Krzyżakowa struktura łączeniowa 03",
+  "{20104,55701}": "Argoni Krzyżakowa struktura łączeniowa 02",
+  "{20104,55901}": "Argoni Struktura łączeniowa L 01",
+  "{20104,56101}": "Argoni Struktura łączeniowa T 01",
   "{20104,60101}": "Zatoka produkcyjna statków S",
   "{20104,60201}": "Zatoka produkcyjna statków M",
   "{20104,60301}": "Zatoka produkcyjna statków L",
@@ -164,27 +164,27 @@
   "{20104,61201}": "Matryca montażowa statków XL",
   "{20104,61301}": "Zatoka produkcyjna statków S/M",
   "{20104,61401}": "Zatoka serwisowa statków S/M",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70003} {20111,5301} {20104,70001}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70003} {20111,5302} {20104,70001}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70003} {20111,5303} {20104,70001}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70004} {20111,5301} {20104,70001}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70004} {20111,5302} {20104,70001}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70004} {20111,5303} {20104,70001}",
-  "{20104,70801}": "(S/M Dok Wysyłkowy Venture){20111,5011}/{20111,5021} {20104,70701}",
-  "{20104,70901}": "(L/XL Dok Wysyłkowy Venture){20111,5031}/{20111,5041} {20104,70701}",
+  "{20104,70101}": "1M6S Podstawowa strefa dokowania",
+  "{20104,70201}": "1M6S Standardowa strefa dokowania",
+  "{20104,70301}": "1M6S Luksusowa strefa dokowania",
+  "{20104,70401}": "3M6S Podstawowa strefa dokowania",
+  "{20104,70501}": "3M6S Standardowa strefa dokowania",
+  "{20104,70601}": "3M6S Luksusowa strefa dokowania",
+  "{20104,70801}": "S/M Dok Wysyłkowy Venture",
+  "{20104,70901}": "L/XL Dok Wysyłkowy Venture",
   "{20104,71001}": "Xenoński dok",
-  "{20104,71201}": "(Argon 1-Dock Pier){20202,101} {20104,71103} {20104,71101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20202,101} {20104,71104} {20104,71101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20202,101} {20104,71105} {20104,71101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20202,401} {20104,71103} {20104,71101}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20202,401} {20104,71104} {20104,71101}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20202,401} {20104,71105} {20104,71101}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20202,501} {20104,71103} {20104,71101}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20202,501} {20104,71104} {20104,71101}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20202,501} {20104,71105} {20104,71101}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70005} {20111,5303} {20104,70001}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20102,1111} {20104,71103} {20104,71101}",
-  "{20104,74901}": "(Argon 1-Dock Short Pier){20202,101} {20104,71109} {20104,71101}",
+  "{20104,71201}": "Argoni 1-Dok Molo",
+  "{20104,71301}": "Argoni 3-Dok T Molo",
+  "{20104,71401}": "Argoni 3-Dok E Molo",
+  "{20104,71501}": "Paranidianie 1-Dok Molo",
+  "{20104,71601}": "Paranidianie 3-Dok T Molo",
+  "{20104,71701}": "Paranidianie 3-Dok E Molo",
+  "{20104,71801}": "Teladianie 1-Dok Molo",
+  "{20104,71901}": "Teladianie 3-Dok T Molo",
+  "{20104,72001}": "Teladianie 3-Dok E Molo",
+  "{20104,73301}": "8M Luksusowa strefa dokowania",
+  "{20104,73401}": "Argońska stacja handlowa 1-Dok Molo",
+  "{20104,74901}": "Argoni Krótki 1-Dok Molo",
   "{20201,101}": "Elektronika zaawan.",
   "{20201,1101}": "Racje żywieniowe",
   "{20201,1201}": "Części kadłuba",
