--- a/src/assets/game_data/Timelines (7.10)/locales/pt-BR.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/pt-BR.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "Quartel General",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "Prod. de Composto Avançado",
   "{20104,100101}": "Extensão do Anel de Habitat",
   "{20104,100201}": "Coluna do Anel de Habitat",
@@ -11,11 +11,11 @@
   "{20104,100801}": "Matriz de Sensor",
   "{20104,100901}": "Área de Manutenção",
   "{20104,101001}": "Ventilação",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20104,10001} {20202,501}",
+  "{20104,10101}": "Prod. de Composto Avançado Teladi",
   "{20104,101101}": "Estrutura de Suporte",
   "{20104,101201}": "Retransmissor de comandos",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "Armazenamento de Habitat A",
+  "{20104,101306}": "Armazenamento de Habitat B",
   "{20104,101401}": "Anel Habitat",
   "{20104,101601}": "Módulo desconhecido",
   "{20104,101801}": "Módulo de Base Xenon",
@@ -25,23 +25,23 @@
   "{20104,102101}": "Grampo do Anel de Habitat",
   "{20104,102201}": "Seção de Serviços do Habitat",
   "{20104,10301}": "Prod. de Célula de Antimatéria",
-  "{20104,103601}": "Deck de Observação na Cobertura.(on top/bottom of station)",
-  "{20104,103701}": "Deck de Observação do Conservatório(on side of station, horizontal)",
-  "{20104,103801}": "Deck de Observação do Pavilhão(on side of station, vertical)",
+  "{20104,103601}": "Deck de Observação na Cobertura.",
+  "{20104,103701}": "Deck de Observação do Conservatório",
+  "{20104,103801}": "Deck de Observação do Pavilhão",
   "{20104,10401}": "Prod. de Conversor de Antimatéria",
   "{20104,10501}": "Prod. de Claytrônicos",
   "{20104,10701}": "Prod. de Componente de Drone",
   "{20104,10801}": "Prod. de Célula de Energia",
   "{20104,10901}": "Prod. de Peças de Motor",
-  "{20104,11001}": "(Teladi Engine Part Production){20104,10901} {20202,501}",
+  "{20104,11001}": "Prod. de Peças de Motor Teladi",
   "{20104,110201}": "Covil de Apostas",
   "{20104,11101}": "Prod. de Bobina de Campo",
   "{20104,11201}": "Prod. de Grafeno",
   "{20104,11301}": "Prod. de Partes do Casco",
-  "{20104,11401}": "(Teladi Hull Part Production){20104,11301} {20202,501}",
-  "{20104,11601}": "(Argon Medical Supply Production){20104,11501} {20202,101}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20104,11501} {20202,401}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20104,11501} {20202,501}",
+  "{20104,11401}": "Prod. de Partes do Casco Teladi",
+  "{20104,11601}": "Produção de Suprimentos Médicos Argon",
+  "{20104,11701}": "Produção de Suprimentos Médicos Paranid",
+  "{20104,11801}": "Produção de Suprimentos Médicos Teladi",
   "{20104,11901}": "Prod. de Microchip",
   "{20104,12001}": "Prod. de Componente de Míssil",
   "{20104,120101}": "Processador de Sucata",
@@ -49,7 +49,7 @@
   "{20104,12201}": "Prod. de Tubo Quântico",
   "{20104,12301}": "Prod. de Metal Refinado",
   "{20104,12401}": "Prod. de Matriz de Varredura",
-  "{20104,12501}": "(Teladi Scanning Array Production){20104,12401} {20202,501}",
+  "{20104,12501}": "Prod. de Matriz de Varredura Teladi",
   "{20104,12601}": "Prod. de Componente de Escudo",
   "{20104,12701}": "Prod. de Pastilhas de Silício",
   "{20104,12801}": "Prod. de Chip Inteligente",
@@ -74,85 +74,85 @@
   "{20104,14601}": "Prod. de Teladianium",
   "{20104,14701}": "Painel de Matriz Solar",
   "{20104,150101}": "Matriz de Sensores de Área Ampla",
-  "{20104,20101}": "(Argon S Container Storage){20104,20001}{20202,101} {20111,5011}",
-  "{20104,20201}": "(Argon M Container Storage){20104,20001}{20202,101} {20111,5021}",
-  "{20104,20301}": "(Argon L Container Storage){20104,20001}{20202,101} {20111,5031}",
-  "{20104,20401}": "(Paranid S Container Storage){20104,20001}{20202,401} {20111,5011}",
-  "{20104,20501}": "(Paranid M Container Storage){20104,20001}{20202,401} {20111,5021}",
-  "{20104,20601}": "(Paranid L Container Storage){20104,20001}{20202,401} {20111,5031}",
-  "{20104,20701}": "(Teladi S Container Storage){20104,20001}{20202,501} {20111,5011}",
-  "{20104,20801}": "(Teladi M Container Storage){20104,20001}{20202,501} {20111,5021}",
-  "{20104,20901}": "(Teladi L Container Storage){20104,20001}{20202,501} {20111,5031}",
-  "{20104,21101}": "(Argon S Liquid Storage){20104,21001} {20202,101} {20111,5011}",
-  "{20104,21201}": "(Argon M Liquid Storage){20104,21001} {20202,101} {20111,5021}",
-  "{20104,21301}": "(Argon L Liquid Storage){20104,21001} {20202,101} {20111,5031}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20104,21001} {20202,401} {20111,5011}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20104,21001} {20202,401} {20111,5021}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20104,21001} {20202,401} {20111,5031}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20104,21001} {20202,501} {20111,5011}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20104,21001} {20202,501} {20111,5021}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20104,21001} {20202,501} {20111,5031}",
-  "{20104,22101}": "(Argon S Solid Storage){20104,22001} {20202,101} {20111,5011}",
-  "{20104,22201}": "(Argon M Solid Storage){20104,22001} {20202,101} {20111,5021}",
-  "{20104,22301}": "(Argon L Solid Storage){20104,22001} {20202,101} {20111,5031}",
-  "{20104,22401}": "(Paranid S Solid Storage){20104,22001} {20202,401} {20111,5011}",
-  "{20104,22501}": "(Paranid M Solid Storage){20104,22001} {20202,401} {20111,5021}",
-  "{20104,22601}": "(Paranid L Solid Storage){20104,22001} {20202,401} {20111,5031}",
-  "{20104,22701}": "(Teladi S Solid Storage){20104,22001} {20202,501} {20111,5011}",
-  "{20104,22801}": "(Teladi M Solid Storage){20104,22001} {20202,501} {20111,5021}",
-  "{20104,22901}": "(Teladi L Solid Storage){20104,22001} {20202,501} {20111,5031}",
-  "{20104,23301}": "(Argon L Universal Storage){20104,23001} {20202,101} {20111,5031}",
+  "{20104,20101}": "Contêiner de ArmazenamentoArgon PP",
+  "{20104,20201}": "Contêiner de ArmazenamentoArgon M",
+  "{20104,20301}": "Contêiner de ArmazenamentoArgon G",
+  "{20104,20401}": "Contêiner de ArmazenamentoParanid PP",
+  "{20104,20501}": "Contêiner de ArmazenamentoParanid M",
+  "{20104,20601}": "Contêiner de ArmazenamentoParanid G",
+  "{20104,20701}": "Contêiner de ArmazenamentoTeladi PP",
+  "{20104,20801}": "Contêiner de ArmazenamentoTeladi M",
+  "{20104,20901}": "Contêiner de ArmazenamentoTeladi G",
+  "{20104,21101}": "Armazenamento de Líquidos Argon PP",
+  "{20104,21201}": "Armazenamento de Líquidos Argon M",
+  "{20104,21301}": "Armazenamento de Líquidos Argon G",
+  "{20104,21401}": "Armazenamento de Líquidos Paranid PP",
+  "{20104,21501}": "Armazenamento de Líquidos Paranid M",
+  "{20104,21601}": "Armazenamento de Líquidos Paranid G",
+  "{20104,21701}": "Armazenamento de Líquidos Teladi PP",
+  "{20104,21801}": "Armazenamento de Líquidos Teladi M",
+  "{20104,21901}": "Armazenamento de Líquidos Teladi G",
+  "{20104,22101}": "Armazenamento de Sólidos Argon PP",
+  "{20104,22201}": "Armazenamento de Sólidos Argon M",
+  "{20104,22301}": "Armazenamento de Sólidos Argon G",
+  "{20104,22401}": "Armazenamento de Sólidos Paranid PP",
+  "{20104,22501}": "Armazenamento de Sólidos Paranid M",
+  "{20104,22601}": "Armazenamento de Sólidos Paranid G",
+  "{20104,22701}": "Armazenamento de Sólidos Teladi PP",
+  "{20104,22801}": "Armazenamento de Sólidos Teladi M",
+  "{20104,22901}": "Armazenamento de Sólidos Teladi G",
+  "{20104,23301}": "Armazenamento Universal Argon G",
   "{20104,24001}": "Armazenamento Matriz",
-  "{20104,30101}": "(Argon S Habitat){20104,30103} {20202,101} {20111,5011}",
-  "{20104,30201}": "(Argon M Habitat){20104,30203} {20202,101} {20111,5021}",
-  "{20104,30301}": "(Argon L Habitat){20104,30303} {20202,101} {20111,5031}",
-  "{20104,30401}": "(Paranid S Dome){20104,30403} {20202,401} {20111,5011}",
-  "{20104,30501}": "(Paranid M Dome){20104,30503} {20202,401} {20111,5021}",
-  "{20104,30601}": "(Paranid L Dome){20104,30603} {20202,401} {20111,5031}",
-  "{20104,30701}": "(Teladi S Biome){20104,30703} {20202,501} {20111,5011}",
-  "{20104,30801}": "(Teladi M Biome){20104,30803} {20202,501} {20111,5021}",
-  "{20104,30901}": "(Teladi L Biome){20104,30903} {20202,501} {20111,5031}",
-  "{20104,40101}": "(Argon Administrative Centre){20104,40001} {20202,101}",
-  "{20104,40201}": "(Paranid Administrative Centre){20104,40001} {20202,401}",
-  "{20104,40301}": "(Teladi Administrative Centre){20104,40001} {20202,501}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20104,40501} {20202,101}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20104,40501} {20202,401}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20104,40501} {20202,501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20104,41001} {20202,101}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20104,41001} {20202,401}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20104,41001} {20202,501}",
-  "{20104,41601}": "(Paranid Faction Capital){20202,401} {20104,41501}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20104,50001} {20111,5101} {20202,101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20104,50001} {20111,5102} {20202,101}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20104,50001} {20111,5103} {20202,101}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20104,50001} {20111,5101} {20202,401}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20104,50001} {20111,5102} {20202,401}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20104,50001} {20111,5103} {20202,401}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20104,50001} {20111,5101} {20202,501}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20104,50001} {20111,5102} {20202,501}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20104,50001} {20111,5103} {20202,501}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20104,51301} {20111,5101} {20202,101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20104,51301} {20111,5101} {20202,401}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20104,51301} {20111,5102} {20202,401}",
-  "{20104,51701}": "(Paranid Y Connection Structure 01){20104,56201} {20202,401} {20111,5101}",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20104,51301} {20111,5101} {20202,501}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20104,52001} {20111,5101} {20202,101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20104,52001} {20111,5102} {20202,101}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20104,52001} {20111,5101} {20202,401}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20104,52001} {20202,401} {20111,5102}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20104,52001} {20202,501} {20111,5101}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20104,52001} {20202,501} {20111,5102}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20104,50001} {20111,6001} {20111,5101}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20104,50001} {20111,6001} {20111,5102}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20104,50001} {20111,6001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20104,51301} {20111,6001} {20111,5101}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20104,52001} {20111,6001} {20111,5101}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20104,52001} {20111,6001} {20111,5102}",
-  "{20104,55501}": "(Argon Arc Connection Structure 01){20104,55001} {20202,101} {20111,5101}",
-  "{20104,55601}": "(Argon Cross Connection Structure 03){20104,51301} {20202,101} {20111,5103}",
-  "{20104,55701}": "(Argon Cross Connection Structure 02){20104,51301} {20202,101} {20111,5102}",
-  "{20104,55901}": "(Argon L Connection Structure 01){20104,55801} {20202,101} {20111,5101}",
-  "{20104,56101}": "(Argon T Connection Structure 01){20104,56001} {20202,101} {20111,5101}",
+  "{20104,30101}": "Habitat Argon PP",
+  "{20104,30201}": "Habitat Argon M",
+  "{20104,30301}": "Habitat Argon G",
+  "{20104,30401}": "Domo Paranid PP",
+  "{20104,30501}": "Domo Paranid M",
+  "{20104,30601}": "Domo Paranid G",
+  "{20104,30701}": "Bioma Teladi PP",
+  "{20104,30801}": "Bioma Teladi M",
+  "{20104,30901}": "Bioma Teladi G",
+  "{20104,40101}": "Centro Administrativo Argon",
+  "{20104,40201}": "Centro Administrativo Paranid",
+  "{20104,40301}": "Centro Administrativo Teladi",
+  "{20104,40601}": "Plataforma de Defesa de Disco Argon",
+  "{20104,40701}": "Plataforma de Defesa de Disco Paranid",
+  "{20104,40801}": "Plataforma de Defesa de Disco Teladi",
+  "{20104,41101}": "Plataforma de Defesa de Ponte Argon",
+  "{20104,41201}": "Plataforma de Defesa de Ponte Paranid",
+  "{20104,41301}": "Plataforma de Defesa de Ponte Teladi",
+  "{20104,41601}": "Paranid Capital da Facção",
+  "{20104,50101}": "Estrutura de Conexão de Base 01 Argon",
+  "{20104,50201}": "Estrutura de Conexão de Base 02 Argon",
+  "{20104,50301}": "Estrutura de Conexão de Base 03 Argon",
+  "{20104,50401}": "Estrutura de Conexão de Base 01 Paranid",
+  "{20104,50501}": "Estrutura de Conexão de Base 02 Paranid",
+  "{20104,50601}": "Estrutura de Conexão de Base 03 Paranid",
+  "{20104,50701}": "Estrutura de Conexão de Base 01 Teladi",
+  "{20104,50801}": "Estrutura de Conexão de Base 02 Teladi",
+  "{20104,50901}": "Estrutura de Conexão de Base 03 Teladi",
+  "{20104,51401}": "Estrutura de Conexão de Cruz 01 Argon",
+  "{20104,51501}": "Estrutura de Conexão de Cruz 01 Paranid",
+  "{20104,51601}": "Estrutura de Conexão de Cruz 02 Paranid",
+  "{20104,51701}": "Conexão de Estrutura em Y Paranid 01",
+  "{20104,51801}": "Estrutura de Conexão de Cruz 01 Teladi",
+  "{20104,52101}": "Estrutura de Conexão Vertical 01 Argon",
+  "{20104,52201}": "Estrutura de Conexão Vertical 02 Argon",
+  "{20104,52301}": "Estrutura de Conexão Vertical 01 Paranid",
+  "{20104,52401}": "Estrutura de Conexão Vertical Paranid 02",
+  "{20104,52501}": "Estrutura de Conexão Vertical Teladi 01",
+  "{20104,52601}": "Estrutura de Conexão Vertical Teladi 02",
+  "{20104,52901}": "Estrutura de Conexão de Base Aventura 01",
+  "{20104,53001}": "Estrutura de Conexão de Base Aventura 02",
+  "{20104,53101}": "Estrutura de Conexão de Base Aventura 03",
+  "{20104,53201}": "Estrutura de Conexão de Cruz Aventura 01",
+  "{20104,53301}": "Estrutura de Conexão Vertical Aventura 01",
+  "{20104,53401}": "Estrutura de Conexão Vertical Aventura 02",
+  "{20104,55501}": "Estrutura de Conexão em Arco Argon 01",
+  "{20104,55601}": "Estrutura de Conexão de Cruz Argon 03",
+  "{20104,55701}": "Estrutura de Conexão de Cruz Argon 02",
+  "{20104,55901}": "Estrutura de Conexão em L Argon 01",
+  "{20104,56101}": "Estrutura de Conexão em T Argon 01",
   "{20104,60101}": "Área de Fabricação de Naves P",
   "{20104,60201}": "Área de Fabricação de Naves M",
   "{20104,60301}": "Área de Fabricação de Naves G",
@@ -164,27 +164,27 @@
   "{20104,61201}": "Matriz de Montagem Nave GG",
   "{20104,61301}": "Área de Fabricação de Nave P/M",
   "{20104,61401}": "Oficina de Manutenção Nave P/M",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70001} {20104,70003} {20111,5301}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70001} {20104,70003} {20111,5302}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70001} {20104,70003} {20111,5303}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70001} {20104,70004} {20111,5301}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70001} {20104,70004} {20111,5302}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70001} {20104,70004} {20111,5303}",
-  "{20104,70801}": "(S/M Venture Sendoff Dock){20111,5011}/{20111,5021} {20104,70701}",
-  "{20104,70901}": "(L/XL Venture Sendoff Dock){20111,5031}/{20111,5041} {20104,70701}",
+  "{20104,70101}": "Área de Pouso 1M6P Básico",
+  "{20104,70201}": "Área de Pouso 1M6P Padrão",
+  "{20104,70301}": "Área de Pouso 1M6P Luxo",
+  "{20104,70401}": "Área de Pouso 3M6P Básico",
+  "{20104,70501}": "Área de Pouso 3M6P Padrão",
+  "{20104,70601}": "Área de Pouso 3M6P Luxo",
+  "{20104,70801}": "PP/M Doca de Despacho de Aventura",
+  "{20104,70901}": "G/GG Doca de Despacho de Aventura",
   "{20104,71001}": "Doca Xenon",
-  "{20104,71201}": "(Argon 1-Dock Pier){20104,71101} {20104,71103} {20202,101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20104,71101} {20104,71104} {20202,101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20104,71101} {20104,71105} {20202,101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20104,71101} {20104,71103} {20202,401}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20104,71101} {20104,71104} {20202,401}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20104,71101} {20104,71105} {20202,401}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20104,71101} {20104,71103} {20202,501}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20104,71101} {20104,71104} {20202,501}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20104,71101} {20104,71105} {20202,501}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70001} {20104,70005} {20111,5303}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20102,1111} {20104,71103} {20104,71101}",
-  "{20104,74901}": "(Argon 1-Dock Short Pier){20104,71101} {20104,71109} {20202,101}",
+  "{20104,71201}": "Píer 1-Doca Argon",
+  "{20104,71301}": "Píer 3-Doca T Argon",
+  "{20104,71401}": "Píer 3-Doca E Argon",
+  "{20104,71501}": "Píer 1-Doca Paranid",
+  "{20104,71601}": "Píer 3-Doca T Paranid",
+  "{20104,71701}": "Píer 3-Doca E Paranid",
+  "{20104,71801}": "Píer 1-Doca Teladi",
+  "{20104,71901}": "Píer 3-Doca T Teladi",
+  "{20104,72001}": "Píer 3-Doca E Teladi",
+  "{20104,73301}": "Área de Pouso 8M Luxo",
+  "{20104,73401}": "Estação Comercial Argon 1-Doca Píer",
+  "{20104,74901}": "Píer 1-Doca Curta Argon",
   "{20201,101}": "Eletrônicos Avançados",
   "{20201,1101}": "Rações Alimentares",
   "{20201,1201}": "Partes de Casco",
