--- a/src/assets/game_data/Timelines (7.10)/locales/zh-TW.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/zh-TW.json
@@ -1,5 +1,5 @@
 {
-  "{20102,2011}": "總部",
+  "(TEMP)nividiumgems": "nividiumgems",
   "{20104,10001}": "先進複合材料產線",
   "{20104,100101}": "棲息地環擴展",
   "{20104,100201}": "棲息地環圓柱",
@@ -11,11 +11,11 @@
   "{20104,100801}": "傳感器陣列",
   "{20104,100901}": "維護區域",
   "{20104,101001}": "換氣設備",
-  "{20104,10101}": "(Teladi Advanced Composite Production){20202,501} {20104,10001}",
+  "{20104,10101}": "Teladi 先進複合材料產線",
   "{20104,101101}": "支撐結構",
   "{20104,101201}": "指令中繼",
-  "{20104,101305}": "(Habitat Storage A){20104,101301} {20403,1}",
-  "{20104,101306}": "(Habitat Storage B){20104,101301} {20403,2}",
+  "{20104,101305}": "棲息地倉儲 A",
+  "{20104,101306}": "棲息地倉儲 B",
   "{20104,101401}": "棲息地環",
   "{20104,101601}": "未知模塊",
   "{20104,101801}": "Xenon基礎模塊",
@@ -33,15 +33,15 @@
   "{20104,10701}": "無人機組件產線",
   "{20104,10801}": "能量電池產線",
   "{20104,10901}": "引擎部件產線",
-  "{20104,11001}": "(Teladi Engine Part Production){20202,501} {20104,10901}",
+  "{20104,11001}": "Teladi 引擎部件產線",
   "{20104,110201}": "娛樂室",
   "{20104,11101}": "勵磁線圈產線",
   "{20104,11201}": "石墨產線",
   "{20104,11301}": "船體部件產線",
-  "{20104,11401}": "(Teladi Hull Part Production){20202,501} {20104,11301}",
-  "{20104,11601}": "(Argon Medical Supply Production){20202,101} {20104,11501}",
-  "{20104,11701}": "(Paranid Medical Supply Production){20202,401} {20104,11501}",
-  "{20104,11801}": "(Teladi Medical Supply Production){20202,501} {20104,11501}",
+  "{20104,11401}": "Teladi 船體部件產線",
+  "{20104,11601}": "Argon 醫療物資產線",
+  "{20104,11701}": "Paranid 醫療物資產線",
+  "{20104,11801}": "Teladi 醫療物資產線",
   "{20104,11901}": "微芯片產線",
   "{20104,12001}": "導彈部件產線",
   "{20104,120101}": "廢料處理設施",
@@ -49,7 +49,7 @@
   "{20104,12201}": "量子管產線",
   "{20104,12301}": "精煉金屬產線",
   "{20104,12401}": "掃瞄陣列產線",
-  "{20104,12501}": "(Teladi Scanning Array Production){20202,501} {20104,12401}",
+  "{20104,12501}": "Teladi 掃瞄陣列產線",
   "{20104,12601}": "護盾部件產線",
   "{20104,12701}": "矽晶片產線",
   "{20104,12801}": "智能芯片產線",
@@ -74,85 +74,85 @@
   "{20104,14601}": "T材料產線",
   "{20104,14701}": "矩陣太陽能面板",
   "{20104,150101}": "廣域感應器陣列",
-  "{20104,20101}": "(Argon S Container Storage){20202,101} {20111,5011} {20104,20001}",
-  "{20104,20201}": "(Argon M Container Storage){20202,101} {20111,5021} {20104,20001}",
-  "{20104,20301}": "(Argon L Container Storage){20202,101} {20111,5031} {20104,20001}",
-  "{20104,20401}": "(Paranid S Container Storage){20202,401} {20111,5011} {20104,20001}",
-  "{20104,20501}": "(Paranid M Container Storage){20202,401} {20111,5021} {20104,20001}",
-  "{20104,20601}": "(Paranid L Container Storage){20202,401} {20111,5031} {20104,20001}",
-  "{20104,20701}": "(Teladi S Container Storage){20202,501} {20111,5011} {20104,20001}",
-  "{20104,20801}": "(Teladi M Container Storage){20202,501} {20111,5021} {20104,20001}",
-  "{20104,20901}": "(Teladi L Container Storage){20202,501} {20111,5031} {20104,20001}",
-  "{20104,21101}": "(Argon S Liquid Storage){20202,101} {20111,5011} {20104,21001}",
-  "{20104,21201}": "(Argon M Liquid Storage){20202,101} {20111,5021} {20104,21001}",
-  "{20104,21301}": "(Argon L Liquid Storage){20202,101} {20111,5031} {20104,21001}",
-  "{20104,21401}": "(Paranid S Liquid Storage){20202,401} {20111,5011} {20104,21001}",
-  "{20104,21501}": "(Paranid M Liquid Storage){20202,401} {20111,5021} {20104,21001}",
-  "{20104,21601}": "(Paranid L Liquid Storage){20202,401} {20111,5031} {20104,21001}",
-  "{20104,21701}": "(Teladi S Liquid Storage){20202,501} {20111,5011} {20104,21001}",
-  "{20104,21801}": "(Teladi M Liquid Storage){20202,501} {20111,5021} {20104,21001}",
-  "{20104,21901}": "(Teladi L Liquid Storage){20202,501} {20111,5031} {20104,21001}",
-  "{20104,22101}": "(Argon S Solid Storage){20202,101} {20111,5011} {20104,22001}",
-  "{20104,22201}": "(Argon M Solid Storage){20202,101} {20111,5021} {20104,22001}",
-  "{20104,22301}": "(Argon L Solid Storage){20202,101} {20111,5031} {20104,22001}",
-  "{20104,22401}": "(Paranid S Solid Storage){20202,401} {20111,5011} {20104,22001}",
-  "{20104,22501}": "(Paranid M Solid Storage){20202,401} {20111,5021} {20104,22001}",
-  "{20104,22601}": "(Paranid L Solid Storage){20202,401} {20111,5031} {20104,22001}",
-  "{20104,22701}": "(Teladi S Solid Storage){20202,501} {20111,5011} {20104,22001}",
-  "{20104,22801}": "(Teladi M Solid Storage){20202,501} {20111,5021} {20104,22001}",
-  "{20104,22901}": "(Teladi L Solid Storage){20202,501} {20111,5031} {20104,22001}",
-  "{20104,23301}": "(Argon L Universal Storage){20202,101} {20111,5031} {20104,23001}",
+  "{20104,20101}": "Argon S 集裝倉儲",
+  "{20104,20201}": "Argon M 集裝倉儲",
+  "{20104,20301}": "Argon L 集裝倉儲",
+  "{20104,20401}": "Paranid S 集裝倉儲",
+  "{20104,20501}": "Paranid M 集裝倉儲",
+  "{20104,20601}": "Paranid L 集裝倉儲",
+  "{20104,20701}": "Teladi S 集裝倉儲",
+  "{20104,20801}": "Teladi M 集裝倉儲",
+  "{20104,20901}": "Teladi L 集裝倉儲",
+  "{20104,21101}": "Argon S 液體倉儲",
+  "{20104,21201}": "Argon M 液體倉儲",
+  "{20104,21301}": "Argon L 液體倉儲",
+  "{20104,21401}": "Paranid S 液體倉儲",
+  "{20104,21501}": "Paranid M 液體倉儲",
+  "{20104,21601}": "Paranid L 液體倉儲",
+  "{20104,21701}": "Teladi S 液體倉儲",
+  "{20104,21801}": "Teladi M 液體倉儲",
+  "{20104,21901}": "Teladi L 液體倉儲",
+  "{20104,22101}": "Argon S 固體倉儲",
+  "{20104,22201}": "Argon M 固體倉儲",
+  "{20104,22301}": "Argon L 固體倉儲",
+  "{20104,22401}": "Paranid S 固體倉儲",
+  "{20104,22501}": "Paranid M 固體倉儲",
+  "{20104,22601}": "Paranid L 固體倉儲",
+  "{20104,22701}": "Teladi S 固體倉儲",
+  "{20104,22801}": "Teladi M 固體倉儲",
+  "{20104,22901}": "Teladi L 固體倉儲",
+  "{20104,23301}": "Argon L 通用倉儲",
   "{20104,24001}": "矩陣倉儲",
-  "{20104,30101}": "(Argon S Habitat){20202,101} {20111,5011} {20104,30103}",
-  "{20104,30201}": "(Argon M Habitat){20202,101} {20111,5021} {20104,30203}",
-  "{20104,30301}": "(Argon L Habitat){20202,101} {20111,5031} {20104,30303}",
-  "{20104,30401}": "(Paranid S Dome){20202,401} {20111,5011} {20104,30403}",
-  "{20104,30501}": "(Paranid M Dome){20202,401} {20111,5021} {20104,30503}",
-  "{20104,30601}": "(Paranid L Dome){20202,401} {20111,5031} {20104,30603}",
-  "{20104,30701}": "(Teladi S Biome){20202,501} {20111,5011} {20104,30703}",
-  "{20104,30801}": "(Teladi M Biome){20202,501} {20111,5021} {20104,30803}",
-  "{20104,30901}": "(Teladi L Biome){20202,501} {20111,5031} {20104,30903}",
-  "{20104,40101}": "(Argon Administrative Centre){20202,101} {20104,40001}",
-  "{20104,40201}": "(Paranid Administrative Centre){20202,401} {20104,40001}",
-  "{20104,40301}": "(Teladi Administrative Centre){20202,501} {20104,40001}",
-  "{20104,40601}": "(Argon Disc Defence Platform){20202,101} {20104,40501}",
-  "{20104,40701}": "(Paranid Disc Defence Platform){20202,401} {20104,40501}",
-  "{20104,40801}": "(Teladi Disc Defence Platform){20202,501} {20104,40501}",
-  "{20104,41101}": "(Argon Bridge Defence Platform){20202,101} {20104,41001}",
-  "{20104,41201}": "(Paranid Bridge Defence Platform){20202,401} {20104,41001}",
-  "{20104,41301}": "(Teladi Bridge Defence Platform){20202,501} {20104,41001}",
-  "{20104,41601}": "(Paranid Faction Capital){20202,401} {20104,41501}",
-  "{20104,50101}": "(Argon Base Connection Structure 01){20202,101} {20104,50001} {20111,5101}",
-  "{20104,50201}": "(Argon Base Connection Structure 02){20202,101} {20104,50001} {20111,5102}",
-  "{20104,50301}": "(Argon Base Connection Structure 03){20202,101} {20104,50001} {20111,5103}",
-  "{20104,50401}": "(Paranid Base Connection Structure 01){20202,401} {20104,50001} {20111,5101}",
-  "{20104,50501}": "(Paranid Base Connection Structure 02){20202,401} {20104,50001} {20111,5102}",
-  "{20104,50601}": "(Paranid Base Connection Structure 03){20202,401} {20104,50001} {20111,5103}",
-  "{20104,50701}": "(Teladi Base Connection Structure 01){20202,501} {20104,50001} {20111,5101}",
-  "{20104,50801}": "(Teladi Base Connection Structure 02){20202,501} {20104,50001} {20111,5102}",
-  "{20104,50901}": "(Teladi Base Connection Structure 03){20202,501} {20104,50001} {20111,5103}",
-  "{20104,51401}": "(Argon Cross Connection Structure 01){20202,101} {20104,51301} {20111,5101}",
-  "{20104,51501}": "(Paranid Cross Connection Structure 01){20202,401} {20104,51301} {20111,5101}",
-  "{20104,51601}": "(Paranid Cross Connection Structure 02){20202,401} {20104,51301} {20111,5102}",
-  "{20104,51701}": "(Paranid Cross Connection Structure 03){20202,401} {20104,51301} {20111,5103}",
-  "{20104,51801}": "(Teladi Cross Connection Structure 01){20202,501} {20104,51301} {20111,5101}",
-  "{20104,52101}": "(Argon Vertical Connection Structure 01){20202,101} {20104,52001} {20111,5101}",
-  "{20104,52201}": "(Argon Vertical Connection Structure 02){20202,101} {20104,52001} {20111,5102}",
-  "{20104,52301}": "(Paranid Vertical Connection Structure 01){20202,401} {20104,52001} {20111,5101}",
-  "{20104,52401}": "(Paranid Vertical Connection Structure 02){20202,401} {20104,52001} {20111,5102}",
-  "{20104,52501}": "(Teladi Vertical Connection Structure 01){20202,501} {20104,52001} {20111,5101}",
-  "{20104,52601}": "(Teladi Vertical Connection Structure 02){20202,501} {20104,52001} {20111,5102}",
-  "{20104,52901}": "(Venture Base Connection Structure 01){20111,6001} {20104,50001} {20111,5101}",
-  "{20104,53001}": "(Venture Base Connection Structure 02){20111,6001} {20104,50001} {20111,5102}",
-  "{20104,53101}": "(Venture Base Connection Structure 03){20111,6001} {20104,50001} {20111,5103}",
-  "{20104,53201}": "(Venture Cross Connection 01){20111,6001} {20104,51301} {20111,5101}",
-  "{20104,53301}": "(Venture Vertical Connection Structure 01){20111,6001} {20104,52001} {20111,5101}",
-  "{20104,53401}": "(Venture Vertical Connection Structure 02){20111,6001} {20104,52001} {20111,5102}",
-  "{20104,55501}": "(Argon Arc Connection Structure 01){20202,101} {20104,55001} {20111,5101}",
-  "{20104,55601}": "(Argon Cross Connection Structure 03){20202,101} {20104,51301} {20111,5103}",
-  "{20104,55701}": "(Argon Cross Connection Structure 02){20202,101} {20104,51301} {20111,5102}",
-  "{20104,55901}": "(Argon L Connection Structure 01){20202,101} {20104,55801} {20111,5101}",
-  "{20104,56101}": "(Argon T Connection Structure 01){20202,101} {20104,56001} {20111,5101}",
+  "{20104,30101}": "Argon S 居住區",
+  "{20104,30201}": "Argon M 居住區",
+  "{20104,30301}": "Argon L 居住區",
+  "{20104,30401}": "Paranid S 穹頂",
+  "{20104,30501}": "Paranid M 穹頂",
+  "{20104,30601}": "Paranid L 穹頂",
+  "{20104,30701}": "Teladi S 生物群落",
+  "{20104,30801}": "Teladi M 生物群落",
+  "{20104,30901}": "Teladi L 生物群落",
+  "{20104,40101}": "Argon 管理中心",
+  "{20104,40201}": "Paranid 管理中心",
+  "{20104,40301}": "Teladi 管理中心",
+  "{20104,40601}": "Argon 碟型防禦平台",
+  "{20104,40701}": "Paranid 碟型防禦平台",
+  "{20104,40801}": "Teladi 碟型防禦平台",
+  "{20104,41101}": "Argon 橋型防禦平台",
+  "{20104,41201}": "Paranid 橋型防禦平台",
+  "{20104,41301}": "Teladi 橋型防禦平台",
+  "{20104,41601}": "Paranid 勢力首都",
+  "{20104,50101}": "Argon 基礎連接結構 01",
+  "{20104,50201}": "Argon 基礎連接結構 02",
+  "{20104,50301}": "Argon 基礎連接結構 03",
+  "{20104,50401}": "Paranid 基礎連接結構 01",
+  "{20104,50501}": "Paranid 基礎連接結構 02",
+  "{20104,50601}": "Paranid 基礎連接結構 03",
+  "{20104,50701}": "Teladi 基礎連接結構 01",
+  "{20104,50801}": "Teladi 基礎連接結構 02",
+  "{20104,50901}": "Teladi 基礎連接結構 03",
+  "{20104,51401}": "Argon 交叉連接結構 01",
+  "{20104,51501}": "Paranid 交叉連接結構 01",
+  "{20104,51601}": "Paranid 交叉連接結構 02",
+  "{20104,51701}": "Paranid 交叉連接結構 03",
+  "{20104,51801}": "Teladi 交叉連接結構 01",
+  "{20104,52101}": "Argon 垂直連接結構 01",
+  "{20104,52201}": "Argon 垂直連接結構 02",
+  "{20104,52301}": "Paranid 垂直連接結構 01",
+  "{20104,52401}": "Paranid 垂直連接結構 02",
+  "{20104,52501}": "Teladi 垂直連接結構 01",
+  "{20104,52601}": "Teladi 垂直連接結構 02",
+  "{20104,52901}": "遠征 基礎連接結構 01",
+  "{20104,53001}": "遠征 基礎連接結構 02",
+  "{20104,53101}": "遠征 基礎連接結構 03",
+  "{20104,53201}": "遠征 交叉連接結構 01",
+  "{20104,53301}": "遠征 垂直連接結構 01",
+  "{20104,53401}": "遠征 垂直連接結構 02",
+  "{20104,55501}": "Argon 弧形連接結構 01",
+  "{20104,55601}": "Argon 交叉連接結構 03",
+  "{20104,55701}": "Argon 交叉連接結構 02",
+  "{20104,55901}": "Argon L 型連接結構 01",
+  "{20104,56101}": "Argon T 型連接結構 01",
   "{20104,60101}": "S級飛船製造港",
   "{20104,60201}": "M級飛船製造港",
   "{20104,60301}": "L級飛船製造港",
@@ -164,27 +164,27 @@
   "{20104,61201}": "XL級飛船裝配矩陣",
   "{20104,61301}": "S/M級飛船製造港",
   "{20104,61401}": "S/M級飛船維護港",
-  "{20104,70101}": "(1M6S Basic Dock Area){20104,70003} {20111,5301} {20104,70001}",
-  "{20104,70201}": "(1M6S Standard Dock Area){20104,70003} {20111,5302} {20104,70001}",
-  "{20104,70301}": "(1M6S Luxury Dock Area){20104,70003} {20111,5303} {20104,70001}",
-  "{20104,70401}": "(3M6S Basic Dock Area){20104,70004} {20111,5301} {20104,70001}",
-  "{20104,70501}": "(3M6S Standard Dock Area){20104,70004} {20111,5302} {20104,70001}",
-  "{20104,70601}": "(3M6S Luxury Dock Area){20104,70004} {20111,5303} {20104,70001}",
-  "{20104,70801}": "(S/M Venture Sendoff Dock){20111,5011}/{20111,5021} {20104,70701}",
-  "{20104,70901}": "(L/XL Venture Sendoff Dock){20111,5031}/{20111,5041} {20104,70701}",
+  "{20104,70101}": "1M6S 基礎 停靠區",
+  "{20104,70201}": "1M6S 標準 停靠區",
+  "{20104,70301}": "1M6S 豪華 停靠區",
+  "{20104,70401}": "3M6S 基礎 停靠區",
+  "{20104,70501}": "3M6S 標準 停靠區",
+  "{20104,70601}": "3M6S 豪華 停靠區",
+  "{20104,70801}": "S/M 遠征派送港口",
+  "{20104,70901}": "L/XL 遠征派送港口",
   "{20104,71001}": "Xenon 停靠區",
-  "{20104,71201}": "(Argon 1-Dock Pier){20202,101} {20104,71103} {20104,71101}",
-  "{20104,71301}": "(Argon 3-Dock T Pier){20202,101} {20104,71104} {20104,71101}",
-  "{20104,71401}": "(Argon 3-Dock E Pier){20202,101} {20104,71105} {20104,71101}",
-  "{20104,71501}": "(Paranid 1-Dock Pier){20202,401} {20104,71103} {20104,71101}",
-  "{20104,71601}": "(Paranid 3-Dock T Pier){20202,401} {20104,71104} {20104,71101}",
-  "{20104,71701}": "(Paranid 3-Dock E Pier){20202,401} {20104,71105} {20104,71101}",
-  "{20104,71801}": "(Teladi 1-Dock Pier){20202,501} {20104,71103} {20104,71101}",
-  "{20104,71901}": "(Teladi 3-Dock T Pier){20202,501} {20104,71104} {20104,71101}",
-  "{20104,72001}": "(Teladi 3-Dock E Pier){20202,501} {20104,71105} {20104,71101}",
-  "{20104,73301}": "(8M Luxury Dock Area){20104,70005} {20111,5303} {20104,70001}",
-  "{20104,73401}": "(Argon Trading Station 1-Dock Pier){20102,1111} {20104,71103} {20104,71101}",
-  "{20104,74901}": "(Argon 1-Dock Short Pier){20202,101} {20104,71109} {20104,71101}",
+  "{20104,71201}": "Argon 單一停靠區 碼頭",
+  "{20104,71301}": "Argon T型-3x泊位 碼頭",
+  "{20104,71401}": "Argon E型-3x泊位 碼頭",
+  "{20104,71501}": "Paranid 單一停靠區 碼頭",
+  "{20104,71601}": "Paranid T型-3x泊位 碼頭",
+  "{20104,71701}": "Paranid E型-3x泊位 碼頭",
+  "{20104,71801}": "Teladi 單一停靠區 碼頭",
+  "{20104,71901}": "Teladi T型-3x泊位 碼頭",
+  "{20104,72001}": "Teladi E型-3x泊位 碼頭",
+  "{20104,73301}": "8M 豪華 停靠區",
+  "{20104,73401}": "Argon貿易空間站 單一停靠區 碼頭",
+  "{20104,74901}": "Argon 單一短停靠區 碼頭",
   "{20201,101}": "先進電子設備",
   "{20201,1101}": "食品配給",
   "{20201,1201}": "船體部件",
